--- a/Cryptanalysis_methods_and_types_of_attacks.tex
+++ b/Cryptanalysis_methods_and_types_of_attacks.tex
@@ -3,7 +3,7 @@
 
 Нелегальный пользователь-криптоаналитик получает информацию путём дешифрования. Сложность этой процедуры определяется числом стандартных операций, которые надо выполнить для достижения цели. \emph{Двоичной сложностью}\index{сложность!двоичная} (или битовой сложностью) алгоритма называется количество двоичных операций, которые необходимо выполнить для его завершения.
 
-Рассмотрим основные сценарии работы криптоаналитика $E$. В первом сценарии криптоаналитик может осуществлять подслушивание и (или) перехват сообщений. Его вмешательство не нарушает целостности информации: $Y=\widetilde{Y}$, где Y -- информация, как случайная величина, до вмешательства, $\widetilde{Y}$ -- после вмешательства. Эта роль криптоаналитика называется \emph{пассивной}. Так как он получает доступ к информации, то здесь нарушается конфиденциальность.
+Рассмотрим основные сценарии работы криптоаналитика $E$. В первом сценарии криптоаналитик может осуществлять подслушивание и (или) перехват сообщений. Его вмешательство не нарушает целостности информации: $Y=\widetilde{Y}$, где Y~-- информация, как случайная величина, до вмешательства, $\widetilde{Y}$~-- после вмешательства. Эта роль криптоаналитика называется \emph{пассивной}. Так как он получает доступ к информации, то здесь нарушается конфиденциальность.
 
 Во втором сценарии роль криптоаналитика \emph{активная}. Он может подслушивать, перехватывать сообщения и преобразовывать их по своему усмотрению: задерживать, искажать с помощью перестановок пакетов, устраивать обрыв связи, создавать новые сообщения и т.~п. В этом случае выполняется условие $Y \neq \widetilde{Y}$. Это значит, что одновременно нарушается целостность и конфиденциальность передаваемой информации.
 
@@ -38,7 +38,7 @@
 
 Для защиты информации от активного криптоаналитика и обеспечения её целостности дополнительно к шифрованию сообщений применяют имитовставку\index{имитовставка}. Для неё используют обозначение $\MAC$ (\langen{message authentication code}). Как правило, $\MAC$ строится на основе хэш-функций, которые будут описаны далее.
 
-Существуют ситуации, когда пользователи $A$ и $B$ не доверяют друг другу. Например, $A$ -- банк, $B$ -- получатель денег. $A$ утверждает, что деньги были переведены, $B$ - что перевода не было. Решение задачи аутентификации и неотрицаемости состоит в обеспечении \emph{электронной подписью}\index{электронная подпись} каждого из абонентов. Предварительно надо решить задачу о генерировании и распределении секретных ключей.
+Существуют ситуации, когда пользователи $A$ и $B$ не доверяют друг другу. Например, $A$~-- банк, $B$~-- получатель денег. $A$ утверждает, что деньги были переведены, $B$ - что перевода не было. Решение задачи аутентификации и неотрицаемости состоит в обеспечении \emph{электронной подписью}\index{электронная подпись} каждого из абонентов. Предварительно надо решить задачу о генерировании и распределении секретных ключей.
 
 В общем случае системы защиты информации должны обеспечивать:
 \begin{itemize}
@@ -52,14 +52,14 @@
 Важным критерием для выбора степени защиты является сравнение стоимости реализации взлома для получения информации и экономического эффекта от владения ей. Очевидно, что если стоимость взлома превышает ценность информации, взлом нецелесообразен.
 
 %Сценарии защиты информации
-%   Сценарий 1. A -- передающая сторона. B -- принимающая сторона. E -- пассивный
+%   Сценарий 1. A~-- передающая сторона. B~-- принимающая сторона. E~-- пассивный
 %криптоаналитик, который может подслушивать передачу, но не может вмешиваться
 %в процесс передачи. Цель защиты: обеспечение конфиденциальности. Средства
 %-- методы шифрования с секретным ключом (симметричные системы шифрования)
 %и методы шифрования с открытым ключом (асимметричные системы шифрования).
-%Сценарий 2. E -- активный криптоаналитик, который может изменять, удалять и вставлять
-%сообщения или их части. Цель защиты -- обеспечение конфиденциальности (не
-%всегда) и обеспечение целостности. Средства -- методы шифрования и добавление
-%имитовставки\index{имитовставка} (Message Authentication Code -- $\MAC$).
-%Сценарий 3. A и B не доверяют друг другу. Цель защиты -- аутентификация пользователя.
-%Средства -- электронная подпись.
+%Сценарий 2. E~-- активный криптоаналитик, который может изменять, удалять и вставлять
+%сообщения или их части. Цель защиты~-- обеспечение конфиденциальности (не
+%всегда) и обеспечение целостности. Средства~-- методы шифрования и добавление
+%имитовставки\index{имитовставка} (Message Authentication Code~-- $\MAC$).
+%Сценарий 3. A и B не доверяют друг другу. Цель защиты~-- аутентификация пользователя.
+%Средства~-- электронная подпись.
