--- a/GOST_R_34.11-2012.tex
+++ b/GOST_R_34.11-2012.tex
@@ -7,7 +7,7 @@
 	\item отсутствие уязвимостей к известным атакам;
 	\item использование только хорошо изученных конструкций и преобразований;
 	\item отсутствие лишних преобразований (каждое преобразование должно гарантировать выполнение определённых криптографических свойств);
-	\item при наличии нескольких вариантов реализации требуемого свойства -- использование наиболее простого для анализа и реализации;
+	\item при наличии нескольких вариантов реализации требуемого свойства~-- использование наиболее простого для анализа и реализации;
 	\item максимальная производительность \emph{программной} реализации.
 \end{itemize}
 
@@ -20,7 +20,7 @@
   \label{fig:stribog-md}
 \end{figure}
 
-Как показано на рис.~\ref{fig:stribog-md}, входное сообщение разбивается на блоки по 512 бит (64 байта). Последний блок \emph{слева} дополняется последовательностью из нулей и  одной единицы до 512 бит (длина дополнения не учитывается в дальнейшем, когда длина сообщения используется как аргумент функций). Для каждой части сообщения вычисляется значение функции $g_N(h, m)$, которая в качестве аргумента использует текущий номер блока (умноженный на 512), результат вычисления для предыдущего блока и очередной блок сообщения. Также есть два завершающих преобразования. Первое вместо блока сообщения использует количество обработанных бит N (то есть длину сообщения), а второе -- арифметическую сумму значений всех блоков сообщения. В предположении, что функция $g_N(h, m)$ является надёжной для создания криптографически стойких хэш-функций, известно, что конструкция Меркла~---~Дамгарда позволяет получить хэш-функцию со следующими параметрами:
+Как показано на рис.~\ref{fig:stribog-md}, входное сообщение разбивается на блоки по 512 бит (64 байта). Последний блок \emph{слева} дополняется последовательностью из нулей и  одной единицы до 512 бит (длина дополнения не учитывается в дальнейшем, когда длина сообщения используется как аргумент функций). Для каждой части сообщения вычисляется значение функции $g_N(h, m)$, которая в качестве аргумента использует текущий номер блока (умноженный на 512), результат вычисления для предыдущего блока и очередной блок сообщения. Также есть два завершающих преобразования. Первое вместо блока сообщения использует количество обработанных бит N (то есть длину сообщения), а второе~-- арифметическую сумму значений всех блоков сообщения. В предположении, что функция $g_N(h, m)$ является надёжной для создания криптографически стойких хэш-функций, известно, что конструкция Меркла~---~Дамгарда позволяет получить хэш-функцию со следующими параметрами:
 
 \begin{itemize}
 	\item сложность построения прообраза: $2^n$ операций;
@@ -51,13 +51,13 @@
 
 Каждый раунд XSPL-шифра, кроме последнего, состоит из следующих обратимых преобразований:
 \begin{itemize}
-	\item $X\left[C\right]$ -- побитовое сложение по модулю 2 с дополнительным аргументом $C$;
-	\item $S$ -- нелинейная обратимая замена байтов;
-	\item $P$ -- перестановка байтов внутри блока данных (транспонирование матрицы размером $8 \times 8$ из ячеек по одному байту каждая);
-	\item $L$ -- обратимое линейное преобразование (умножение векторов на фиксированную матрицу).
+	\item $X\left[C\right]$~-- побитовое сложение по модулю 2 с дополнительным аргументом $C$;
+	\item $S$~-- нелинейная обратимая замена байтов;
+	\item $P$~-- перестановка байтов внутри блока данных (транспонирование матрицы размером $8 \times 8$ из ячеек по одному байту каждая);
+	\item $L$~-- обратимое линейное преобразование (умножение векторов на фиксированную матрицу).
 \end{itemize}
 
-Особенностью предложенного шифра является полная аналогия между алгоритмом развёртывания ключа и алгоритмом, собственно, преобразования открытого текста. В качестве <<раундовых ключей>> для алгоритма развёртывания ключа на первом раунде используется общее число уже обработанных бит хэш-функцией N, а на остальных раундах -- 512-битные константы, заданные в стандарте.\index{шифр!XSPL|)}
+Особенностью предложенного шифра является полная аналогия между алгоритмом развёртывания ключа и алгоритмом, собственно, преобразования открытого текста. В качестве <<раундовых ключей>> для алгоритма развёртывания ключа на первом раунде используется общее число уже обработанных бит хэш-функцией N, а на остальных раундах~-- 512-битные константы, заданные в стандарте.\index{шифр!XSPL|)}
 
 Новый алгоритм, согласно отдельным исследованиям, до полутора раз быстрее предыдущего стандарта ГОСТ Р 34.11-94\index{хэш-функция!ГОСТ Р 34.11-94} за счет использоавния 27 тактов на один байт входного сообщения (94~МиБ/с) против 40 для старого стандарта (64~МиБ/с)\footnote{Реализации тестировались на процессоре Intel Core i7-920 CPU @ 2{,}67~GHz и видеокарте NVIDIA GTX 580. См.~\cite{Lebedev:2013}.}.
 
