--- a/GOST_R_34.12-2015.tex
+++ b/GOST_R_34.12-2015.tex
@@ -1,7 +1,7 @@
 \section{Шифр «Кузнечик»}\label{section-grig}\index{шифр!Кузнечик|(}
 \selectlanguage{russian}
 
-В июне 2015 года в России был принят новый стандарт блочного шифрования ГОСТ Р 34.12-2015~\cite{GOST-R:34.12-2015}. Данный стандарт включает в себя два блочных шифра -- старый ГОСТ 28147-89, получивший теперь название <<Магма>>, и новый шифр со 128-битным входным блоком, получившим название <<Кузнечик>>.
+В июне 2015 года в России был принят новый стандарт блочного шифрования ГОСТ Р 34.12-2015~\cite{GOST-R:34.12-2015}. Данный стандарт включает в себя два блочных шифра~-- старый ГОСТ 28147-89, получивший теперь название <<Магма>>, и новый шифр со 128-битным входным блоком, получившим название <<Кузнечик>>.
 
 В отличие от шифра <<Магма>>, новый шифр <<Кузнечик>> основан на SP-сети\index{SP-сеть} (сети замен и перестановок), то есть основан на серии обратимых преобразований, а не на ячейке Фейстеля\index{ячейка Фейстеля}. Как и другие популярные шифры, он является блочным раундовым шифром и имеет выделенную процедуру выработки раундовых ключей. Шифр работает с блоками открытого текста по 128 бит, а размер ключа шифра составляет 256 бит. Отдельный раунд шифра <<Кузнечик>> состоит из операции наложения ключа, нелинейного и линейного преобразований, как изображено на рис.~\ref{fig:kuznechik-step}. Всего в алгоритме 10 раундов, последний из которых состоит только из операции наложения ключа. 
 
@@ -34,7 +34,7 @@
   \label{fig:kuznechik-p}
 \end{figure}
 
-Алгоритм развёртывания ключа основан на ячейке Фейстеля, хотя и не использует её ключевую особенность -- обратимость. Начало алгоритма изображено на рис.~\ref{fig:kuznechik-keys}.
+Алгоритм развёртывания ключа основан на ячейке Фейстеля, хотя и не использует её ключевую особенность~-- обратимость. Начало алгоритма изображено на рис.~\ref{fig:kuznechik-keys}.
 
 \begin{figure}[htb]
 	\centering
@@ -50,7 +50,7 @@
 	\item Все остальные пары раундовых ключей вплоть до $K_{9}$ и $K_{10}$ получаются аналогичным образом (использованием предыдущей пары ключей и 8 констант $C_i$).
 \end{itemize}
 
-Так как и легальный отправитель, и легальный получатель используют функцию развёртывания ключа в прямом направлении, начиная с пары ($K_1, K_2$), заканчивая парой ($K_{9}, K_{10}$), то алгоритм никогда не <<идёт назад>> и не использует ключевую особенность ячейки Фейстеля -- её обратимость.
+Так как и легальный отправитель, и легальный получатель используют функцию развёртывания ключа в прямом направлении, начиная с пары ($K_1, K_2$), заканчивая парой ($K_{9}, K_{10}$), то алгоритм никогда не <<идёт назад>> и не использует ключевую особенность ячейки Фейстеля~-- её обратимость.
 
 В отличие от стандарта 1989 года новый стандарт не включает режимы сцепления блоков, они были вынесены в отдельный ГОСТ Р 34.13-2015 <<Режимы работы блочных шифров>>~\cite{GOST-R:34.13-2015}.
 
