--- a/coincide-index_method.tex
+++ b/coincide-index_method.tex
@@ -47,7 +47,7 @@
 а одинаково распределённые случайные буквы во второй строке имеют другое распределение:
     \[ \mathcal{P}_2  = \left\{ {p_{21} ,p_{22} , \ldots , p_{2A} } \right\}. \]
 
-В этом случае сумму по всем парам мы разделяем на три суммы: по парам внутри позиций первой строки, по парам внутри позиций второй строки и по парам, в которых первая позиция берётся из первой строки, а вторая -- из второй:
+В этом случае сумму по всем парам мы разделяем на три суммы: по парам внутри позиций первой строки, по парам внутри позиций второй строки и по парам, в которых первая позиция берётся из первой строки, а вторая~-- из второй:
 \begin{multline*}
 I(\mathcal{P}_1, \mathcal{P}_2) =
         \frac{2}{L(L - 1)} \cdot \left(
@@ -88,7 +88,7 @@ I(\mathcal{P}_1, \mathcal{P}_2, \ldots, \mathcal{P}_m ) = \\
 + \frac{2}{L(L - 1)} \left( \left( \frac{L}{m} \right)^2 k_{p_1, p_2} + \left( \frac{L}{m} \right)^2 k_{p_1, p_3} + \dots + \left( \frac{L}{m} \right)^2 k_{p_{m - 1}, p_m } \right).
 \end{multline*}
 
-Первая сумма содержит $m$ слагаемых, вторая -- $ \frac{m(m-1)}{2}$ слагаемых. Полагая
+Первая сумма содержит $m$ слагаемых, вторая~-- $ \frac{m(m-1)}{2}$ слагаемых. Полагая
     \[ k_{p_1} = k_{p_2} = \dots = k_{p_m} = k_p, \]
     \[ k_{p_i p_j } = k_r = \frac{1}{A}, ~ i \ne j, \]
 получим после несложных выкладок
