--- a/el-gamal.tex
+++ b/el-gamal.tex
@@ -3,7 +3,7 @@
 
 Эта система шифрования с открытым ключом опубликована в 1985 году Эль-Гамалем (\langen{Taher El Gamal}, \cite{ElGamal:1985}). Рассмотрим принципы её построения.
 
-Пусть имеется мультипликативная группа $\Z_p^* = \{1, 2, \dots, p-1\}$, где $p$ -- большое простое\index{число!простое} число, содержащее не менее 1024 двоичных разрядов. В группе $\Z_p^*$ существует $\varphi( \varphi( p ) ) = \varphi( p - 1 )$ элементов, которые порождают все элементы группы. Такие элементы называются генераторами\footnote{Подробнее см. раздел~\ref{section-groups} в приложении.}.
+Пусть имеется мультипликативная группа $\Z_p^* = \{1, 2, \dots, p-1\}$, где $p$~-- большое простое\index{число!простое} число, содержащее не менее 1024 двоичных разрядов. В группе $\Z_p^*$ существует $\varphi( \varphi( p ) ) = \varphi( p - 1 )$ элементов, которые порождают все элементы группы. Такие элементы называются генераторами\footnote{Подробнее см. раздел~\ref{section-groups} в приложении.}.
 
 Выберем один из таких генераторов $g$ и целое число $x$ в интервале $1 \leq x \leq p-1$. Вычислим:
     \[ y = g^x \mod p. \]
@@ -65,7 +65,7 @@
                 Делители 40: 1, 2, 4, 5, 8, 10, 20. Элемент группы является примитивным, если все его степени, соответствующие делителям порядка группы, не сравнимы с 1. Из таблицы~\ref{tab:elgamal-generator-search} видно, что число $g = 6$ является генератором всей группы.
                 \begin{table}[!ht]
                     \centering
-                    \caption{Поиск генератора в циклической группе $\Z_{41}^*$. Элемент 6 -- генератор\label{tab:elgamal-generator-search}}
+                    \caption{Поиск генератора в циклической группе $\Z_{41}^*$. Элемент 6~-- генератор\label{tab:elgamal-generator-search}}
                     \resizebox{\textwidth}{!}{ \begin{tabular}{|c|c|c|c|c|c|c|c|c|}
                         \hline
                         \multirow{2}{*}{Элемент} & \multicolumn{7}{|c|}{Степени} & \multirow{2}{*}{Порядок элемента} \\
@@ -154,7 +154,7 @@
         \end{array} \]
     \item сравнивает значения $f_1$ и $f_2$; если
         \[ f_1 = f_2, \]
-        то подпись подлинная, в противном случае -- фальсифицированная (или случайно испорченная).
+        то подпись подлинная, в противном случае~-- фальсифицированная (или случайно испорченная).
 \end{itemize}
 
 Покажем, что проверка подписи корректна. По малой теореме Ферма получаем
@@ -241,7 +241,7 @@
     \label{S}
 \end{equation}
 
-где $x_{1}$ и $x_{2}$ -- целые неотрицательные числа,
+где $x_{1}$ и $x_{2}$~-- целые неотрицательные числа,
     \[ x_{1} \leq S-1, ~ x_{2} \leq S-1. \]
 
 Такое представление является однозначным.
@@ -270,7 +270,7 @@
 
 Несколько позже подобный метод ускоренного решения уравнения~\ref{S} был предложен американским математиком Шенксом (\langen{Daniel Shanks}, \cite{Shanks:1971}). Оба алгоритма в литературе можно встретить под названиями: алгоритм Гельфонда, алгоритм Шенкса или алгоритм Гельфонда~---~Шенкса.
 
-Пусть $k = \lceil \log_2 p \rceil$ -- битовая длина числа $p$. Алгоритм Гельфонда имеет экспоненциальную сложность (число двоичных операций):
+Пусть $k = \lceil \log_2 p \rceil$~-- битовая длина числа $p$. Алгоритм Гельфонда имеет экспоненциальную сложность (число двоичных операций):
     \[ O\left(\sqrt{p}\right) = O\left(e^{\frac{1}{2} \frac{1}{\log_2 e} k}\right). \]
 \index{алгоритм!Гельфонда~---~Шенкса|)}
 
