--- a/euclidean_algorithm.tex
+++ b/euclidean_algorithm.tex
@@ -24,7 +24,7 @@
 \emph{Расширенный алгоритм Евклида} (см., например,~\cite[8.8 Наибольшие общие делители и алгоритм Евклида]{Aho:1979}) для целых $a, b: a > b$ находит
     \[ x, y, d = \gcd(a,b): ax + by = d. \]
 
-Введём обозначения: $g_i$ -- частное от деления, $r_i$ -- остаток от деления на $i$-м шаге. Алгоритм:
+Введём обозначения: $g_i$~-- частное от деления, $r_i$~-- остаток от деления на $i$-м шаге. Алгоритм:
 \[\begin{array}{ll}
 	r_{-1} & := a, \\
 	r_0 & := b, \\
@@ -51,12 +51,12 @@
         \hline
         $i$ & $g_i$ & $r_i$ & $x_i$ & $y_i$ & & & \\
         \hline
-        $-1$ &  --- & $136$ &   $1$ &   $0$ & $136 =$ & $ 1 \cdot 136$ & $ + 0 \cdot 36$ \\
-	 $0$ &  --- &  $36$ &   $0$ &   $1$ &  $36 =$ & $ 0 \cdot 136$ & $ + 1 \cdot 36$ \\
+        $-1$ & ~--- & $136$ &   $1$ &   $0$ & $136 =$ & $ 1 \cdot 136$ & $ + 0 \cdot 36$ \\
+	 $0$ & ~--- &  $36$ &   $0$ &   $1$ &  $36 =$ & $ 0 \cdot 136$ & $ + 1 \cdot 36$ \\
 	 $1$ &  $3$ &  $28$ &  $+1$ &  $-3$ &  $28 =$ & $+1 \cdot 136$ & $ - 3 \cdot 36$ \\
 	 $2$ &  $1$ &   $8$ &  $-1$ &  $+4$ &  $8 =$ & $-1 \cdot 136$ & $ + 4 \cdot 36$ \\
 	 $3$ &  $3$ &   $4$ &  $+4$ & $-15$ &  $4 =$ & $+4 \cdot 136$ & $ -15 \cdot 36$ \\
-	 $4$ &  $2$ &   $0$ &   --- &   --- & & & --- \\
+	 $4$ &  $2$ &   $0$ &  ~--- &  ~--- & & &~--- \\
         \hline
     \end{tabular}
 \end{table}
@@ -65,7 +65,7 @@
 
 \subsection[Нахождение мультипликативного обратного]{Нахождение мультипликативного \protect\\ обратного по модулю}
 
-Расширенный алгоритм Евклида можно использовать для вычисления обратного элемента\index{обратный элемент}: для заданных $a, n$ найти $x, y, d = \gcd(a,n): ax + ny = d$. Пусть $a,n$ -- взаимно простые, тогда:
+Расширенный алгоритм Евклида можно использовать для вычисления обратного элемента\index{обратный элемент}: для заданных $a, n$ найти $x, y, d = \gcd(a,n): ax + ny = d$. Пусть $a,n$~-- взаимно простые, тогда:
 \[\begin{array}{l}
 	ax + ny = 1, \\
 	ax \equiv 1 \mod n, \\
@@ -82,12 +82,12 @@
         \hline
         $i$ & $g_i$ & $r_i$ & $x_i$ & $y_i$ & & & \\
         \hline
-        $-1$ &  --- & $142$ &   $1$ &   $0$ & $142 =$ & $  1 \cdot 142$ & $ + 0 \cdot 33$ \\
-	 $0$ &  --- &  $33$ &   $0$ &   $1$ &  $33 =$ & $  0 \cdot 142$ & $ + 1 \cdot 33$ \\
+        $-1$ & ~--- & $142$ &   $1$ &   $0$ & $142 =$ & $  1 \cdot 142$ & $ + 0 \cdot 33$ \\
+	 $0$ & ~--- &  $33$ &   $0$ &   $1$ &  $33 =$ & $  0 \cdot 142$ & $ + 1 \cdot 33$ \\
 	 $1$ &  $4$ &  $10$ &  $+1$ &  $-4$ &  $10 =$ & $ +1 \cdot 142$ & $ - 4 \cdot 33$ \\
 	 $2$ &  $3$ &   $3$ &  $-3$ & $+13$ &   $3 =$ & $ -3 \cdot 142$ & $+ 13 \cdot 33$ \\
 	 $3$ &  $3$ &   $1$ & $+10$ & $-43$ &   $1 =$ & $+10 \cdot 142$ & $- 43 \cdot 33$ \\
-	 $4$ &  $3$ &   $0$ &   --- &   --- & & & --- \\
+	 $4$ &  $3$ &   $0$ &  ~--- &  ~--- & & &~--- \\
         \hline
     \end{tabular}
 \end{table}
