--- a/girault_scheme.tex
+++ b/girault_scheme.tex
@@ -1,11 +1,11 @@
 \subsection{Взаимная аутентификация с доверенным центром}
 \selectlanguage{russian}
 
-В \emph{протоколе Жиро}\index{протокол!Жиро} (\langfr{Marc Girault},~\cite{Girault:1990, Girault:1991}) участвуют три стороны -- $A$, $B$ и надёжный центр $T$.
+В \emph{протоколе Жиро}\index{протокол!Жиро} (\langfr{Marc Girault},~\cite{Girault:1990, Girault:1991}) участвуют три стороны~-- $A$, $B$ и надёжный центр $T$.
 \begin{enumerate}
     \item У стороны $T$ есть открытый и закрытый ключи криптосистемы RSA\index{криптосистема!RSA},
         \[ n=pq, ~ e, ~ d=e^{-1} \mod \varphi(n), \]
-        с дополнительным параметром $g$ -- генератором подгруппы максимально возможного порядка мультипликативной группы $\Z_n^*$:
+        с дополнительным параметром $g$~-- генератором подгруппы максимально возможного порядка мультипликативной группы $\Z_n^*$:
         \[ \begin{array}{l}
             \PK_T = (n, e, g) ~~\text{открытый ключ}, \\
             \SK_T = (d) ~~ \text{закрытый ключ}. \\
@@ -20,7 +20,7 @@
             A \rightarrow T: & ~ I_A, ~~ g^{-\SK_A} = g^{-a} \mod n, \\
             B \rightarrow T: & ~ I_B, ~~ g^{-\SK_B} = g^{-b} \mod n, \\
         \end{array} \]
-        где $I_A, I_B$ -- числовые идентификаторы сторон.
+        где $I_A, I_B$~-- числовые идентификаторы сторон.
     \item Центр $T$ вычисляет открытые ключи для $A$ и $B$ и также по надёжному каналу передаёт им:
         \[ \begin{array}{ll}
             A \leftarrow T: & ~ \PK_A = (g^{-\SK_A} - I_A)^{\SK_T} = (g^{-a} - I_A)^d \mod n, \\
