--- a/groups.tex
+++ b/groups.tex
@@ -62,7 +62,7 @@
 \begin{itemize}
     \item элементы $g^i$, для которых число $i$ взаимно просто с $|\Gr|$, породят снова всю группу
             \[ \Gr = \{ g^i, g^{2i}, g^{3i}, \dots, g^{|\Gr| i} = 1 \}, \]
-        так как степени $\{i, 2i, 3i, \dots, |\Gr| i \}$ по модулю $|\Gr|$ образуют перестановку чисел $\{1, 2, 3, \dots, |\Gr|\}$; следовательно, $g^i$ -- тоже генератор, число таких чисел $i$ равно по определению функции Эйлера $\varphi(|\Gr|)$ ($\varphi(n)$ -- количество взаимно простых с $n$ целых чисел в диапазоне $[1,n-1]$);
+        так как степени $\{i, 2i, 3i, \dots, |\Gr| i \}$ по модулю $|\Gr|$ образуют перестановку чисел $\{1, 2, 3, \dots, |\Gr|\}$; следовательно, $g^i$~-- тоже генератор, число таких чисел $i$ равно по определению функции Эйлера $\varphi(|\Gr|)$ ($\varphi(n)$~-- количество взаимно простых с $n$ целых чисел в диапазоне $[1,n-1]$);
     \item элементы $g^i$, для которых $i$ имеют общие делители
             \[ d_i = \gcd(i, |\Gr|) \neq 1 \]
         c $|\Gr|$, породят подгруппы
@@ -82,25 +82,25 @@
 
 \emph{Группой $\Z_p^*$} называется группа\index{группа!$\Z_p^*$}
     \[ \Z_p^* = \{1, 2, \dots, p-1 \}, \]
-где $p$ -- простое\index{число!простое} число, операция в группе -- умножение $\ast$ по $\Mod p$.
+где $p$~-- простое\index{число!простое} число, операция в группе~-- умножение $\ast$ по $\Mod p$.
 
-Группа $\Z_p^*$ -- \emph{циклическая}, порядок --
+Группа $\Z_p^*$~-- \emph{циклическая}, порядок~--
     \[ |\Z_p^*| = \varphi(p) = p - 1. \]
-Число генераторов в группе --
+Число генераторов в группе~--
     \[ \varphi(|\Z_p^*|) = \varphi(p-1). \]
 
-Из того, что $\Z_p^*$ -- группа, для простого\index{число!простое} $p$ и любого $a \in [2, p-1] \mod p$ следует \emph{малая теорема Ферма}\index{теорема!Ферма малая}:
+Из того, что $\Z_p^*$~-- группа, для простого\index{число!простое} $p$ и любого $a \in [2, p-1] \mod p$ следует \emph{малая теорема Ферма}\index{теорема!Ферма малая}:
     \[ a^{p-1} = 1 \mod p. \]
 На малой теореме Ферма основаны многие тесты проверки числа на простоту.
 
 \example
-Рассмотрим группу $\Z_{19}^*$. Порядок группы -- 18. Делители: 2, 3, 6, 9. Является ли 12 генератором?
+Рассмотрим группу $\Z_{19}^*$. Порядок группы~-- 18. Делители: 2, 3, 6, 9. Является ли 12 генератором?
 \[ \begin{array}{l}
     12^2 = -8 \mod 19, \\
     12^3 = -1 \mod 19, \\
     12^6 = 1 \mod 19, \\
 \end{array} \]
-12 -- генератор подгруппы 6-го порядка. Является ли 13 генератором?
+12~-- генератор подгруппы 6-го порядка. Является ли 13 генератором?
 \[ \begin{array}{l}
     13^2 = -2 \mod 19, \\
     13^3 = -7 \mod 19, \\
@@ -108,11 +108,11 @@
     13^9 = -1 \mod 19, \\
     13^{18} = 1 \mod 19, \\
 \end{array} \]
-13 -- генератор всей группы.
+13~-- генератор всей группы.
 \exampleend
 
 \example
-В таблице~\ref{tab:Zp-sample} приведён пример группы $\Z_{13}^*$. Число генераторов -- $\varphi(12) = 4$. Подгруппы:
+В таблице~\ref{tab:Zp-sample} приведён пример группы $\Z_{13}^*$. Число генераторов~-- $\varphi(12) = 4$. Подгруппы:
     \[ \Gr^{(1)}, \Gr^{(2)}, \Gr^{(3)}, \Gr^{(4)}, \Gr^{(6)}, \]
 верхний индекс обозначает порядок подгруппы.
 
@@ -145,10 +145,10 @@
 
 \emph{Функция Эйлера}\index{функция!Эйлера} $\varphi(n)$ определяется как количество натуральных чисел, взаимно простых с $n$ на отрезке от 1 до $n-1$.
 
-Если $n=p$ -- простое\index{число!простое} число, то
+Если $n=p$~-- простое\index{число!простое} число, то
     \[ \varphi(p) = p - 1, \]
     \[ \varphi(p^k) = p^k - p^{k-1} = p^{k-1}(p - 1). \]
-Если $n$ -- составное число и
+Если $n$~-- составное число и
     \[ n = \prod \limits_{i} p_i^{k_i} \]
 разложено на простые множители $p_i$, то
     \[ \varphi(n) = \prod \limits_{i} \varphi(p_i^{k_i}) =  \prod \limits_{i} p_i^{k_i - 1}(p_i - 1). \]
@@ -157,13 +157,13 @@
     \[ \Z_n^* = \left\{ a \in \left\{ 1, 2, \dots, n-1 \right\} : \gcd(a,n) = 1 \right\} \]
 с операцией умножения $\ast$ по $\Mod n$.
 
-Порядок группы --
+Порядок группы~--
     \[ |\Z_n^*| = \varphi(n). \]
-Группа $\Z_p^*$ -- частный случай группы $\Z_n^*$.
+Группа $\Z_p^*$~-- частный случай группы $\Z_n^*$.
 
-Если $n$ -- \emph{составное}\index{число!составное} (не простое) число, то группа $\Z_n^*$ -- \emph{нециклическая}.
+Если $n$~-- \emph{составное}\index{число!составное} (не простое) число, то группа $\Z_n^*$~-- \emph{нециклическая}.
 
-Из того, что $\Z_n^*$ -- группа, для любых $a \neq 0, n > 1: \gcd(a,n) = 1$ следует \emph{теорема Эйлера}\index{теорема!Эйлера}:
+Из того, что $\Z_n^*$~-- группа, для любых $a \neq 0, n > 1: \gcd(a,n) = 1$ следует \emph{теорема Эйлера}\index{теорема!Эйлера}:
     \[ a^{\varphi(n)} = 1 \mod n. \]
 
 При возведении в степень, если $\gcd(a,n) = 1$, выполняется
@@ -234,34 +234,34 @@
 
 В криптографии рассматриваются \emph{конечные} поля (с конечным числом элементов), называемые также \emph{полями Галуа}.
 
-Число элементов в любом конечном поле равно $p^n$, где $p$ -- простое\index{число!простое} число и $n$ -- натуральное число. Обозначения поля Галуа: $\GF{p}, \GF{p^n}, \F_p, \F_{p^n}$ (аббревиатура от \langen{Galois field}). Все поля Галуа $\GF{p^n}$ изоморфны друг другу (существует взаимно однозначное отображение между полями, сохраняющее действие всех операций). Другими словами, существует только одно поле Галуа $\GF{p^n}$ для фиксированных $p, n$.
+Число элементов в любом конечном поле равно $p^n$, где $p$~-- простое\index{число!простое} число и $n$~-- натуральное число. Обозначения поля Галуа: $\GF{p}, \GF{p^n}, \F_p, \F_{p^n}$ (аббревиатура от \langen{Galois field}). Все поля Галуа $\GF{p^n}$ изоморфны друг другу (существует взаимно однозначное отображение между полями, сохраняющее действие всех операций). Другими словами, существует только одно поле Галуа $\GF{p^n}$ для фиксированных $p, n$.
 
 Приведём примеры конечных полей.
 
 Двоичное поле $\GF{2}$ состоит из двух элементов. Однако задать его можно разными способами.
 \begin{itemize}
-	\item Как множество из двух чисел <<0>> и <<1>> с определёнными на нём операциями <<сложение>> и <<умножение>> как сложение и умножение чисел по модулю 2. Нейтральным элементом по сложению будет <<0>>, по умножению -- <<1>>:
+	\item Как множество из двух чисел <<0>> и <<1>> с определёнными на нём операциями <<сложение>> и <<умножение>> как сложение и умножение чисел по модулю 2. Нейтральным элементом по сложению будет <<0>>, по умножению~-- <<1>>:
 \[\begin{array}{ll}
 	0 + 0 = 0,	& 	0 \cdot 0 = 0, \\
 	0 + 1 = 1,	& 	0 \cdot 1 = 0, \\
 	1 + 0 = 1,	& 	1 \cdot 0 = 0, \\
 	1 + 1 = 0,	& 	1 \cdot 1 = 1. \\
 \end{array}\]
-	\item Как множество из двух логических объектов <<ЛОЖЬ>> ($F$) и <<ИСТИНА>> ($T$) с определёнными на нём операциями <<сложение>> и <<умножение>> как булевые операции <<исключающее или>> и <<и>> соответственно. Нейтральным элементом по сложению будет <<ЛОЖЬ>>, по умножению -- <<ИСТИНА>>:
+	\item Как множество из двух логических объектов <<ЛОЖЬ>> ($F$) и <<ИСТИНА>> ($T$) с определёнными на нём операциями <<сложение>> и <<умножение>> как булевые операции <<исключающее или>> и <<и>> соответственно. Нейтральным элементом по сложению будет <<ЛОЖЬ>>, по умножению~-- <<ИСТИНА>>:
 \[\begin{array}{ll}
 	F + F = F,	& 	F \cdot F = F, \\
 	F + T = T,	& 	F \cdot T = F, \\
 	T + F = T,	& 	T \cdot F = F, \\
 	T + T = F,	& 	T \cdot T = T. \\
 \end{array}\]
-	\item Как множество из двух логических объектов <<ЛОЖЬ>> ($F$) и <<ИСТИНА>> ($T$) с определёнными на нём операциями <<сложение>> и <<умножение>> как булевые операции <<эквивалентность>> и <<или>> соответственно. Нейтральным элементом по сложению будет <<ИСТИНА>>, по умножению -- <<ЛОЖЬ>>:
+	\item Как множество из двух логических объектов <<ЛОЖЬ>> ($F$) и <<ИСТИНА>> ($T$) с определёнными на нём операциями <<сложение>> и <<умножение>> как булевые операции <<эквивалентность>> и <<или>> соответственно. Нейтральным элементом по сложению будет <<ИСТИНА>>, по умножению~-- <<ЛОЖЬ>>:
 \[\begin{array}{ll}
 	F + F = T,	& 	F \cdot F = F, \\
 	F + T = F,	& 	F \cdot T = T, \\
 	T + F = F,	& 	T \cdot F = T, \\
 	T + T = T,	& 	T \cdot T = T. \\
 \end{array}\]
-	\item Как множество из двух чисел <<0>> и <<1>> с определёнными на нём операциями <<сложение>> и <<умножение>>, заданными в табличном представлении. Нейтральным элементом по сложению будет <<1>>, по умножению -- <<0>>:
+	\item Как множество из двух чисел <<0>> и <<1>> с определёнными на нём операциями <<сложение>> и <<умножение>>, заданными в табличном представлении. Нейтральным элементом по сложению будет <<1>>, по умножению~-- <<0>>:
 \[\begin{array}{ll}
 	0 + 0 = 1,	& 	0 \cdot 0 = 0, \\
 	0 + 1 = 0,	& 	0 \cdot 1 = 1, \\
@@ -270,12 +270,12 @@
 \end{array}\]
 \end{itemize}
 
-Все перечисленные выше варианты множеств изоморфны друг другу. Поэтому в дальнейшем под конечным полем $\GF{p}$, где $p$ -- простое\index{число!простое} число, будем понимать поле, заданное как множество целых чисел от $0$ до $p-1$ включительно, на котором операции <<сложение>> и <<умножение>> заданы как операции сложения и умножения чисел по модулю числа $p$. Например, поле $\GF{7}$ будем считать состоящим из 7 чисел $\{0, 1, 2, 3, 4, 5, 6\}$ с операциями умножения $(\cdot \mod 7)$ и сложения $(+ \mod 7)$ по модулю.
+Все перечисленные выше варианты множеств изоморфны друг другу. Поэтому в дальнейшем под конечным полем $\GF{p}$, где $p$~-- простое\index{число!простое} число, будем понимать поле, заданное как множество целых чисел от $0$ до $p-1$ включительно, на котором операции <<сложение>> и <<умножение>> заданы как операции сложения и умножения чисел по модулю числа $p$. Например, поле $\GF{7}$ будем считать состоящим из 7 чисел $\{0, 1, 2, 3, 4, 5, 6\}$ с операциями умножения $(\cdot \mod 7)$ и сложения $(+ \mod 7)$ по модулю.
 
 Конечное поле $\GF{p^n}, n > 1$ строится \emph{расширением} \emph{базового} поля $\GF{p}$. Элемент поля представляется как многочлен степени $n-1$ (или меньше) с коэффициентами из базового поля $\GF{p}$:
     \[ \alpha = \sum\limits_{i=0}^{n-1} a_i x^i, ~ a_i \in \GF{p}. \]
 
-Операция сложения элементов в таком поле традиционно задаётся как операция сложения коэффициентов при одинаковых степенях в базовом поле $\GF{p}$. Операция умножения -- как умножение многочленов со сложением и умножением коэффициентов в базовом поле $\GF{p}$ и дальнейшим приведением результата по модулю некоторого заданного (для поля) неприводимого\footnote{Многочлен называется \emph{неприводимым}\index{многочлен!неприводимый}, если он не раскладывается на множители, и \emph{приводимым}\index{многочлен!приводимый}, если раскладывается.} многочлена $m(x)$. Количество элементов в поле равно $p^n$.
+Операция сложения элементов в таком поле традиционно задаётся как операция сложения коэффициентов при одинаковых степенях в базовом поле $\GF{p}$. Операция умножения~-- как умножение многочленов со сложением и умножением коэффициентов в базовом поле $\GF{p}$ и дальнейшим приведением результата по модулю некоторого заданного (для поля) неприводимого\footnote{Многочлен называется \emph{неприводимым}\index{многочлен!неприводимый}, если он не раскладывается на множители, и \emph{приводимым}\index{многочлен!приводимый}, если раскладывается.} многочлена $m(x)$. Количество элементов в поле равно $p^n$.
 
 Многочлен $g(x)$ называется \emph{примитивным элементом}\index{многочлен!примитивный} (генератором) поля, если его степени порождают все ненулевые элементы, то есть $\GF{p^n} \setminus \{0\}$, заданное неприводимым многочленом $m(x)$, за исключением нуля:
     \[ \GF{p^n} \setminus \{0\} = \{ g(x), g^2(x), g^3(x), \dots, g^{p^n-1}(x) = 1 \mod m(x) \}. \]
