--- a/groups_of_ec_points_over_finite_fields.tex
+++ b/groups_of_ec_points_over_finite_fields.tex
@@ -8,7 +8,7 @@
     E: ~ y^{2} = x^{3} + ax + b,
     \label{Wer}
 \end{equation}
-где $a,b \in \R$ -- вещественные числа. Эта форма представления эллиптической кривой называется формой Вейерштрасса.
+где $a,b \in \R$~-- вещественные числа. Эта форма представления эллиптической кривой называется формой Вейерштрасса.
 
 На кривой определён инвариант:
 \begin{equation}
@@ -16,7 +16,7 @@
     %\label{Inv}
 \end{equation}
 
-Пусть $x_{1} ,x_{2} ,x_{3} $ -- корни уравнения $x^3 + a x + b = 0$. Определим дискриминант $D$ в виде:
+Пусть $x_{1} ,x_{2} ,x_{3} $~-- корни уравнения $x^3 + a x + b = 0$. Определим дискриминант $D$ в виде:
     \[ D =(x_1 - x_2)^2 (x_1 - x_3)^2 (x_2 - x_3)^2 = - 16(4 a^3 + 27 b^2). \]
 
 Рассмотрим различные значения дискриминанта $D$ и соответствующие им кривые, которые представлены на рисунках~\ref{fig:elliptic-curve-1},~\ref{fig:elliptic-curve-2},~\ref{fig:elliptic-curve-3}.
@@ -51,7 +51,7 @@
 есть тангенс угла наклона между прямой, проходящей через точки $P$ и $Q$, и осью $x$.
 
 	Теперь рассмотрим специальные случаи.
-    \item Пусть точки совпадают: $P = Q$. Прямая $PQ$ превращается в касательную к кривой в точке $P$. Находим пересечение касательной с кривой, инвертируем $y$-координату полученной точки, это будет точка $P + P = R$. Тогда $\lambda$ -- тангенс угла между касательной, проведённой к эллиптической кривой в точке $P$, и осью $x$. Запишем уравнение касательной к эллиптической кривой в точке $(x; y)$ в виде:
+    \item Пусть точки совпадают: $P = Q$. Прямая $PQ$ превращается в касательную к кривой в точке $P$. Находим пересечение касательной с кривой, инвертируем $y$-координату полученной точки, это будет точка $P + P = R$. Тогда $\lambda$~-- тангенс угла между касательной, проведённой к эллиптической кривой в точке $P$, и осью $x$. Запишем уравнение касательной к эллиптической кривой в точке $(x; y)$ в виде:
             \[ 2 y y' = 3 x^2 + a. \]
         Производная равна
             \[ y' = \frac{3 x^2 + a}{2 y}, \]
@@ -60,7 +60,7 @@
         Координаты $R$ имеют прежний вид:
             \[ x_3 = \lambda^2 - x_1 - x_2, \]
             \[ y_3 = - y_1 + \lambda (x_1 - x_3), \]
-    \item Пусть $P$ и $Q$ -- противоположные точки, то есть $P=(x; y)$ и $Q=(x; -y)$. Введём ещё одну точку на бесконечности и обозначим её $O$ (точка $O$ или точка 0 <<ноль>>, или альтернативное обозначение $\infty$). Результатом сложения двух противоположных точек определим точку $O$. Точка $Q$ в данном случае обозначается как $-P$:
+    \item Пусть $P$ и $Q$~-- противоположные точки, то есть $P=(x; y)$ и $Q=(x; -y)$. Введём ещё одну точку на бесконечности и обозначим её $O$ (точка $O$ или точка 0 <<ноль>>, или альтернативное обозначение $\infty$). Результатом сложения двух противоположных точек определим точку $O$. Точка $Q$ в данном случае обозначается как $-P$:
         \[ P = (x; y), ~ -P = (x; -y), ~ P + (-P) = O. \]
     \item Пусть $P = (x; 0)$ лежит на оси $x$, тогда
         \[ -P = P, ~ P + P = O. \]
@@ -69,7 +69,7 @@
 Все точки эллиптической кривой, а также точка $O$ образуют коммутативную группу $\E(\R)$ относительно введённой операции сложения, то есть выполняются законы коммутативной группы\index{группа!точек эллиптической кривой}:
 \begin{itemize}
     \item сумма точек $P + Q$ лежит на эллиптической кривой;
-    \item существует нулевой элемент -- это точка $O$ на бесконечности:
+    \item существует нулевой элемент~-- это точка $O$ на бесконечности:
         \[ \forall P \in \E(\R): ~ O + P = P; \]
     \item для любой точки $P$ существует единственный обратный элемент $-P$:
         \[ P + (-P) = O; \]
@@ -129,9 +129,9 @@
         \end{gather*}
 \end{enumerate}
 
-Мы рассматриваем эллиптические кривые над конечным полем $\Z_p$, где $p > 3$ -- простое\index{число!простое} число, элементы $\Z_p$ -- целые числа $\{0, 1, 2, \ldots, p-1\}$, то есть исследуем следующее уравнение двух переменных $x, y \in \Z_p$:
+Мы рассматриваем эллиптические кривые над конечным полем $\Z_p$, где $p > 3$~-- простое\index{число!простое} число, элементы $\Z_p$~-- целые числа $\{0, 1, 2, \ldots, p-1\}$, то есть исследуем следующее уравнение двух переменных $x, y \in \Z_p$:
     \[ y^2 = x^3 + a x + b \mod p, \]
-где $a, b \in \Z_p$ -- некоторые константы.
+где $a, b \in \Z_p$~-- некоторые константы.
 
 Как и в случае выше, множество точек над конечным полем $\Z_p$, удовлетворяющих уравнению эллиптической кривой, вместе с точкой в бесконечности $O$ образуют конечную группу $\E(\Z_p)$ относительно описанного закона сложения:\index{группа!точек эллиптической кривой}
     \[ \E(\Z_p) ~ \equiv~  O ~ \bigcup ~
