--- a/ipsec.tex
+++ b/ipsec.tex
@@ -9,7 +9,7 @@ IPsec определяет:
     \item шифрование с аутентификацией (протокол ESP, Encapsulating Security Payload);\index{протокол!ESP}
     \item только аутентификацию сообщений (протокол AH, Authentication Header).\index{протокол!AH}
 \end{itemize}
-Основное (современное) применение этих протоколов состоит в построении VPN\index{протокол!VPN} (Virtual Private Network -- виртуальная частная сеть) при использовании IPsec в так называемом туннельном режиме.
+Основное (современное) применение этих протоколов состоит в построении VPN\index{протокол!VPN} (Virtual Private Network~-- виртуальная частная сеть) при использовании IPsec в так называемом туннельном режиме.
 
 Аутентификация в режимах ESP и AH определяется по-разному. Аутентификация в ESP гарантирует целостность\index{целостность} только зашифрованных полезных данных (пакетов следующего уровня после IP). Аутентификация AH гарантирует целостность всего IP-пакета (за исключением полей, изменяемых в процессе передачи пакета по сети).
 
@@ -17,7 +17,7 @@ IPsec определяет:
 
 %http://www.ietf.org/rfc/rfc4306.txt
 
-Протокол IKE версии 2 (\langen{Internet Key Exchange})\index{протокол!IKE}~\cite{rfc4306}, по существу, можно описать следующим образом. Пусть $I$ -- инициатор соединения, $R$ -- отвечающая сторона.
+Протокол IKE версии 2 (\langen{Internet Key Exchange})\index{протокол!IKE}~\cite{rfc4306}, по существу, можно описать следующим образом. Пусть $I$~-- инициатор соединения, $R$~-- отвечающая сторона.
 
 Протокол состоит из двух фаз. Первая фаза очень похожа на установление соединения в SSL/TLS: она включает возможный обмен сертификатами $C_I, C_R$ стандарта X.509 для аутентификации (или альтернативную аутентификацию по общему заранее созданному секретному ключу) и создание общих предварительных сеансовых ключей протокола IKE по протоколу Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана}. Сеансовые ключи протокола IKE служат для шифрования и аутентификации сообщений второй фазы. Вторая фаза создаёт сеансовые ключи для протоколов ESP, AH, то есть ключи для шифрования конечных данных. Сообщения второй фазы также используются для смены ранее созданных сеансовых ключей, и в этом случае протокол сразу начинается со второй фазы с применением ранее созданных сеансовых ключей протокола IKE.
 
@@ -25,7 +25,7 @@ IPsec определяет:
     \item Создание предварительной защищённой связи для протокола IKE и аутентификация сторон.
         \begin{enumerate}
             \item $I \rightarrow R$: ~ $\left(g^{x_I}\right.$, одноразовая метка $N_I$, идентификаторы поддерживаемых криптографических алгоритмов$\left.\right)$.
-                % HDR, SAi1, KEi, Ni   -->
+                % HDR, SAi1, KEi, Ni  ~-->
 
             \item $I \leftarrow R$: ~$\left(g^{x_R}\right.$, одноразовая метка $N_R$, идентификаторы выбранных алгоритмов, запрос сертификата $C_I\left.\right)$.
                 % <--    HDR, SAr1, KEr, Nr, [CERTREQ]
@@ -39,15 +39,15 @@ IPsec определяет:
                     \[ \{ K_d \| Ka_I \| Ka_R \| Ke_I \| Ke_R
                         % \| Kp_I \| Kp_R
                         \} = PRF(seed, ~ N_i ~\|~ N_r), \]
-                где $Ka_I, Ka_R$ -- ключи кода аутентификации для связи в обоих направлениях, ~ $Ke_I, Ke_R$ -- ключи шифрования сообщений для двух направлений, ~ $K_d$ -- инициирующее значение генератора $PRF$ для создания сеансовых ключей окончательной защищённой связи, ~ функцией $PRF(x)$ обозначается выход генератора с инициализирующим значением $x$.
-                %$Kp_I, Kp_R$ --  which areused when generating an AUTH payload.
+                где $Ka_I, Ka_R$~-- ключи кода аутентификации для связи в обоих направлениях, ~ $Ke_I, Ke_R$~-- ключи шифрования сообщений для двух направлений, ~ $K_d$~-- инициирующее значение генератора $PRF$ для создания сеансовых ключей окончательной защищённой связи, ~ функцией $PRF(x)$ обозначается выход генератора с инициализирующим значением $x$.
+                %$Kp_I, Kp_R$~--  which areused when generating an AUTH payload.
 
                 При дальнейшем обмене данными сообщения шифруются алгоритмом AES\index{шифр!AES} в режиме CBC со случайно выбранным инициализирующим вектором $IV$ на сеансовых ключах $Ke$ и аутентифицируются имитовставкой\index{имитовставка} на ключах $Ka$. Введём обозначения для шифрования сообщения $m$ со сцеплением блоков $E_{Ke_X}(m)$, и совместного шифрования, и добавления кода аутентификации сообщений $\langle m \rangle_X$ для исходящих данных от стороны $X$:
                     \[  E_{Ke_X}(m) = IV ~\|~ E_{Ke_X}(IV ~\|~ m), \]
                     \[  \langle m \rangle_X = E_{Ke_X}(m) ~\|~ \HMAC(Ka_X, ~ E_{Ke_X}(m)). \]
 
             \item $I \rightarrow R$: ~ $\langle ID_I, ~ C_I, ~\text{запрос сертификата}~ C_R, ~ ID_R, ~ A_I \rangle_I$.
-                % HDR, SK {IDi, [CERT,] [CERTREQ,] [IDr,] AUTH, SAi2, TSi, TSr}     -->
+                % HDR, SK {IDi, [CERT,] [CERTREQ,] [IDr,] AUTH, SAi2, TSi, TSr}    ~-->
 
                 По значениям идентификаторов $ID_I, ID_R$ сторона $R$ проверяет знание стороной $I$ ключей $Ke, Ka$.
 
@@ -55,11 +55,11 @@ IPsec определяет:
                     \[ A_I = \textrm{ЭП}(data). \]
                 Сторона $R$ также проверяет сертификат $C_I$ по цепочке до доверенного сертификата верхнего уровня.
 
-                Второй вариант аутентификации -- по общему секретному симметричному ключу аутентификации $K_{IR}$, который заранее был создан $I$ и $R$, как в Kerberos. Сторона $I$ показывает, что знает общий секрет, вычисляя
+                Второй вариант аутентификации~-- по общему секретному симметричному ключу аутентификации $K_{IR}$, который заранее был создан $I$ и $R$, как в Kerberos. Сторона $I$ показывает, что знает общий секрет, вычисляя
                     \[ A_I = PRF( PRF(K_{IR}, ~ \text{текст ''Key Pad for IKEv2''}), ~ data). \]
                 Сторона $R$ сравнивает присланное значение $A_I$ с вычисленным и убеждается, что $I$ знает общий секрет.
 
-                Сообщение $data$ -- это открытое сообщение данной транзакции, за исключением нескольких полей.
+                Сообщение $data$~-- это открытое сообщение данной транзакции, за исключением нескольких полей.
 
             \item $I \leftarrow R$: ~ $\langle ID_R, ~ C_R, ~ A_R \rangle_R$.
                 % HDR, SK {IDr, [CERT,] AUTH, SAr2, TSi, TSr}
@@ -70,7 +70,7 @@ IPsec определяет:
     \item Создание защищённой связи для протоколов ESP, AH, то есть ключей шифрования и кодов аутентификации конечных полезных данных. Фаза повторяет первые две транзакции первой фазы с созданием ключей по одноразовой метке $N'$ и протоколу Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана} с закрытыми ключами $x'$.
         \begin{enumerate}
             \item $I \rightarrow R$: ~ $\langle g^{x'_I}$, одноразовая метка $N'_I$, поддерживаемые алгоритмы для ESP, AH$\rangle_I$.
-                % HDR, SK {[N], SA, Ni, [KEi], [TSi, TSr]}             -->
+                % HDR, SK {[N], SA, Ni, [KEi], [TSi, TSr]}            ~-->
             \item $I \rightarrow R$: ~ $\langle g^{x'_R}$, одноразовая метка $N'_R$, выбранные алгоритмы для ESP, AH$\rangle_R$.
                 % <--    HDR, SK {SA, Nr, [KEr], [TSi, TSr]}
         \end{enumerate}
@@ -85,7 +85,7 @@ IPsec определяет:
 
 \emph{Защищённая связь} (\langen{Security Association, SA}) является \emph{однонаправленной} от отправителя к получателю и характеризуется тремя основными параметрами:
 \begin{itemize}
-    \item индексом параметров защиты -- уникальным 32-битовым числом, входящим в заголовок ESP- и AH-пакетов;
+    \item индексом параметров защиты~-- уникальным 32-битовым числом, входящим в заголовок ESP- и AH-пакетов;
     \item IP-адресом стороны-отправителя;
     \item идентификатором применения ESP- или AH-протокола.
 \end{itemize}
@@ -93,8 +93,8 @@ IPsec определяет:
 Защищённые связи хранятся в таблице защищённых связей со следующими полями:
 \begin{itemize}
     \item счётчик порядкового номера, входит в заголовок ESP- и AH-пакетов;
-    \item окно защиты от воспроизведения -- скользящий буфер порядковых номеров пакетов для защиты от пропуска и повтора пакетов;
-    \item информация протокола ESP и AH -- алгоритмы, ключи, время действия ключей;
+    \item окно защиты от воспроизведения~-- скользящий буфер порядковых номеров пакетов для защиты от пропуска и повтора пакетов;
+    \item информация протокола ESP и AH~-- алгоритмы, ключи, время действия ключей;
     \item режим протокола: транспортный или туннельный.
 \end{itemize}
 
@@ -152,7 +152,7 @@ IPsec определяет:
 	\caption{Заголовок AH пакета\label{fig:ipsec-ah}}
 \end{figure}
 
-Аутентификатор сообщения определяется так же, как и в протоколе ESP -- усечённое до 96 бит значение $\HMAC(Ka', m)$, вычисленное стандартным способом.
+Аутентификатор сообщения определяется так же, как и в протоколе ESP~-- усечённое до 96 бит значение $\HMAC(Ka', m)$, вычисленное стандартным способом.
 
 На рис.~\ref{fig:ipsec-ah-modes} показано применение протокола в транспортном и туннельном режимах.
 
