--- a/micalis_generator.tex
+++ b/micalis_generator.tex
@@ -1,6 +1,6 @@
 \subsection{Генератор Микали}\index{генератор!Микали}
 
-Другой пример -- генератор Микали.
+Другой пример~-- генератор Микали.
 
 Так же выбирают большие простые числа $p,q$ с битовой длиной не менее 512, вычисляют число $n = pq$. Находят функцию Эйлера $\varphi(n) = (p-1) (q-1)$ и задают целое число $e$ такое, что наибольший общий делитель $\gcd(e, \varphi(n)) = 1$. С помощью генератора случайных чисел выбирают $0 \leq x_{0} \leq n-1$. Вычисляют
 \[ \begin{array}{l}
@@ -17,4 +17,4 @@
     k_N = x_N^2 \mod 2. \\
 \end{array} \]
 
-Как и генератор BBS, генератор Микали -- криптостойкий, для его взлома требуется разложить число $n$ на множители. Недостаток -- маленькая скорость.
+Как и генератор BBS, генератор Микали~-- криптостойкий, для его взлома требуется разложить число $n$ на множители. Недостаток~-- маленькая скорость.
