--- a/monoalphabetic_ciphers.tex
+++ b/monoalphabetic_ciphers.tex
@@ -23,13 +23,13 @@
 В русском языке сообщение \texttt{изучайтекриптографию} посредством шифрования с ключом $K = \text{\texttt{г}}$ (сдвиг вправо на 3 символа по алфавиту) преобразуется в \texttt{лкцъгмхзнултхсёугчлб}.
 \exampleend
 
-Недостатком любого шифра замены является то, что в шифрованном тексте сохраняются все частоты появления букв открытого текста и корреляционные связи между буквами. Они существуют в каждом языке. Например, в русском языке чаще всего встречаются буквы $A$ и $O$. Для дешифрования криптоаналитик имеет возможность прочитать открытый текст, используя частотный анализ букв шифртекста. Для <<взлома>> шифра Цезаря достаточно найти одну пару букв -- одну замену.
+Недостатком любого шифра замены является то, что в шифрованном тексте сохраняются все частоты появления букв открытого текста и корреляционные связи между буквами. Они существуют в каждом языке. Например, в русском языке чаще всего встречаются буквы $A$ и $O$. Для дешифрования криптоаналитик имеет возможность прочитать открытый текст, используя частотный анализ букв шифртекста. Для <<взлома>> шифра Цезаря достаточно найти одну пару букв~-- одну замену.
 
 \subsection{Аддитивный шифр перестановки}\index{шифр!перестановки аддитивный}
 
 Рисунок~\ref{fig:caesar-additiv} поясняет \emph{аддитивный шифр} перестановки на алфавите. Все 26 букв латинского алфавита нумеруют по порядку от 0 до 25. Затем номер буквы меняют в соответствии с уравнением:
     \[ y = x + b \mod 26, \]
-где $x$ -- прежний номер, $y$ -- новый номер, $b$ -- заданное целое число, определяющее сдвиг номера и известное только легальным пользователям. Очевидно, что шифр Цезаря является примером аддитивного шифра.
+где $x$~-- прежний номер, $y$~-- новый номер, $b$~-- заданное целое число, определяющее сдвиг номера и известное только легальным пользователям. Очевидно, что шифр Цезаря является примером аддитивного шифра.
 
 \begin{figure}[thb]
 \[ \begin{array}{ccccccccccc}
@@ -54,6 +54,6 @@
 Расшифрование осуществляется по формуле:
     \[ x = (y - b) a^{-1} \mod n. \]
 
-Чтобы обеспечить обратимость в этом шифре, должен существовать единственный обратный элемент $a^{-1}$ по модулю $n$. Для этого должно выполняться условие $\gcd(a,n) = 1$, то есть $a$ и $n$ должны быть взаимно простыми числами ($\gcd$ -- сокращение, образованное от термина greatest common divisor -- наибольший общий делитель, $\text{НОД}$). Очевидно, что для <<взлома>> такого шифра достаточно найти две пары букв -- две замены.
+Чтобы обеспечить обратимость в этом шифре, должен существовать единственный обратный элемент $a^{-1}$ по модулю $n$. Для этого должно выполняться условие $\gcd(a,n) = 1$, то есть $a$ и $n$ должны быть взаимно простыми числами ($\gcd$~-- сокращение, образованное от термина greatest common divisor~-- наибольший общий делитель, $\text{НОД}$). Очевидно, что для <<взлома>> такого шифра достаточно найти две пары букв~-- две замены.
 
 \index{шифр!моноалфавитный|)}
