--- a/perfect_secure_systems.tex
+++ b/perfect_secure_systems.tex
@@ -66,7 +66,7 @@ H(K)\geq H(K|C)\geq H(M|C).
 
 %Функцию шифрования обозначим $E: \{ M, K \} \rightarrow C$. Процедура шифрования состоит из следующих шагов.
 %\begin{itemize}
-%    \item Легальный пользователь $A$ выбирает ключ $k \in K$ и секретно сообщает его легальному пользователю $B$ (дополнительная задача -- распределение ключей).
+%    \item Легальный пользователь $A$ выбирает ключ $k \in K$ и секретно сообщает его легальному пользователю $B$ (дополнительная задача~-- распределение ключей).
 %    \item По открытому сообщению $m \in M$ и выбранному ключу $k$ вычисляют шифрованное сообщение $c = E_k(m) \in C$.
 %\end{itemize}
 
@@ -83,15 +83,15 @@ H(K)\geq H(K|C)\geq H(M|C).
 %Криптостойкость шифра оценивается числом операций, необходимым для определения: открытого текста $m$ по шифртексту $c$, либо ключа шифрования $k$ по открытому тексту $m$ и шифртексту $c$.
 
 %$M, C, K$ интерпретируются как случайные величины.
-%Пусть заданы распределения вероятностей $P_m(M), P_c(C), P_k(K)$. По определению шифрование $C = E_K(M)$ -- детерминированная функция своих аргументов.
-%Если при выбранном шифре оказалось, что открытый текст $M$ и шифртекст $C$ -- статистически независимые случайные величины, то считается, что такая система обладает совершенной криптостойкостью.
+%Пусть заданы распределения вероятностей $P_m(M), P_c(C), P_k(K)$. По определению шифрование $C = E_K(M)$~-- детерминированная функция своих аргументов.
+%Если при выбранном шифре оказалось, что открытый текст $M$ и шифртекст $C$~-- статистически независимые случайные величины, то считается, что такая система обладает совершенной криптостойкостью.
 
 
 %\subsection{Длина ключа}
 
 %Пусть сообщения $m\in M$ и ключи $r\in K$ являются независимыми случайными величинами. Это значит, что их совместная вероятность $P_{mk}(M, K)$ равна произведению отдельных вероятностей:
 %\[P_{mk}(M, K) = P_m(M) \cdot P_k(K).\]
-%Пусть $C = E_K(M)$ -- множество шифрованных текстов, $M = D_K(C)$ -- множество расшифрованных текстов. Можно найти вероятности $P_c(C), P_{mck}(M,C,K)$.
+%Пусть $C = E_K(M)$~-- множество шифрованных текстов, $M = D_K(C)$~-- множество расшифрованных текстов. Можно найти вероятности $P_c(C), P_{mck}(M,C,K)$.
 
 %Используя известные соотношения о безусловной и условной энтропии~\cite{GabPil:2007}, оценим энтропию открытых текстов $M$ с учётом статистической независимости $M$ и $C$:
  %   \[ H(M) = H(M | C) \leq H(MK | C) = H(K | C) + H(M | CK) = \]     \[ = H(K | C) \leq H(K). \]
