--- a/polyalphabetic_cipher_cryptanalysis.tex
+++ b/polyalphabetic_cipher_cryptanalysis.tex
@@ -23,11 +23,11 @@
 
 \begin{center} \begin{tabular}{|lcl|}
     \hline
-    абвгдежзийклмнопрстуфхцчшщъыьэюя & -- & алфавит \\
-    йклмнопрстуфхцчшщъыьэюяабвгдежзи & -- & 1-й шифр \\
-    гаэъчфсолиевяьщцурнкздбюышхтпмйж & -- & 2-й шифр \\
-    бфзънаужщмятешлюсдчкэргцйьпвхиыо & -- & 3-й шифр \\
-    пъерыжсьзтэиуюйфякхалцбмчвншгощд & -- & 4-й шифр \\
+    абвгдежзийклмнопрстуфхцчшщъыьэюя &~-- & алфавит \\
+    йклмнопрстуфхцчшщъыьэюяабвгдежзи &~-- & 1-й шифр \\
+    гаэъчфсолиевяьщцурнкздбюышхтпмйж &~-- & 2-й шифр \\
+    бфзънаужщмятешлюсдчкэргцйьпвхиыо &~-- & 3-й шифр \\
+    пъерыжсьзтэиуюйфякхалцбмчвншгощд &~-- & 4-й шифр \\
     \hline
 \end{tabular} \end{center}
 
@@ -37,7 +37,7 @@
 \noindent \texttt{съсш щгжисюбщыро фч рлыоуупцлы цйубэыфсюдя лкчааюцщдхия б хйеуж шщ чйхк япуща уорчй чьщьйьщуййч еплжюсчахоищцлщдфснбюсл щ йккцжцлщ эйсншт щчыовхюди ззн лъяд лежон еючълмсртжцьвж лгсзйьчш нфчз чюаюе лжйкуахйнаиеьв йцл ккфщуюийч з ьцсйвгых созжъншшо лъяд цсзнкешлгых цщзшо цспллтп с чахйвщ юйцсзхфс кзсахцщ сйффзшо лъяд рльнгыхъж дпхлез нфчгхл шй шущ юоелхчулу щкяйлщнкыэа ечрюзыгчжфж щц чршйлщм длвожыро кйялыожчжфпшйънх хйещж съсш сьлрнг шпртзпзн чечуцжъещус рысоншй щщтжлтез съспхл спрьлесчшйънхщ ъйужыьл ячваечи щрщт оефжыхъж дхщщщховхюдф щрщт щ змув ыщгепылжпялщ е шубэыляж лщдфснбюсж шпбвщ клща уорчй с лъяд р юяйэщийящ эчнлядф дйрчбщыро ыфжнжыфмерулкфтез у ьщу чншйъжчки чщыйечзафдэсф юйнэщсцта з съсш ргфплт з йъьлео лр иосщх афчэч щюяочаиоьшйо цсймубухьлжъщнжщсбюсфнзнгяхсюакула ьйчбмс лгжффшпшубеффшючф лъьюаюсф нии длячыл йщъбюсолейьшйт сщьцл нжыфм е нфчкуще кйчк юощфцччщуч убьцщлъщгжзо лъя ыгя эйе чйфпяй шущоылр аъвлесжр ъьчах чаакшфцжцг нжыже ечоейпьлкып щюыфсжъьлтс рлыоуупыфтгцщм ыожчжфпшйънщуцщъйчаспрла хсцле ллнйл злях лъя цфщькфуюч ебэ цфщькфуючяшймщлъщгжзо сщьцл яйыщсазщшз чнсппгых угяюолжъосшй хьлрчщфяйощжцфдучнсд цгзюоышщзррйпфдхе лъя ччшймщ чзшг ейнфтз}
 \end{quote}
 
-Теперь проведём криптоанализ, используя метод Касиски. Предварительно подсчитаем число появлений каждой буквы в шифртексте. Эти данные приведём в таблице, где $i$ в первой строке означает букву алфавита, а $f_{i}$ во второй строке -- это число появлений этой буквы в шифртексте. Всего в нашем шифртексте имеется $L=1036$ букв.
+Теперь проведём криптоанализ, используя метод Касиски. Предварительно подсчитаем число появлений каждой буквы в шифртексте. Эти данные приведём в таблице, где $i$ в первой строке означает букву алфавита, а $f_{i}$ во второй строке~-- это число появлений этой буквы в шифртексте. Всего в нашем шифртексте имеется $L=1036$ букв.
 
 \begin{center} \resizebox{\textwidth}{!}{ \begin{tabular}{|c||c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
     \hline
@@ -105,13 +105,13 @@
     \[ \mathbf{X} = (X_1 ,X_2 , \ldots , X_L ) \]
 и вычисляют вероятность того, что два случайных элемента этой последовательности совпадают. Эта величина называется \emph{индексом совпадений} и обозначается $I_{c}(\mathbf{x}),$ где
     \[ I_{c} (\mathbf{x}) = \frac{{\sum\limits_{i = 1}^A {f_i (f_i  - 1)} }} {{L(L - 1)}}, \]
-$f_{i}$ -- число появлений буквы $i$ в последовательности $\mathbf{x}$, $A$ -- число букв в алфавите.
+$f_{i}$~-- число появлений буквы $i$ в последовательности $\mathbf{x}$, $A$~-- число букв в алфавите.
 
 Значение этого индекса используется в криптоанализе полиалфавитных шифров для приближённого определения периода по формуле:
     \[ m \approx \frac{{k_p  - k_r }} {{I_{c} (\mathbf{x}) - k_r  + \frac{{k_p  - I_{c} (\mathbf{x})}} {L}}}, \]
 где
     \[ k_r  = \frac{1}{A}, ~~ k_p  = \sum\limits_{i=1}^A p_i^2, \]
-$p_i $ -- частота появления буквы $i$ в естественном языке.
+$p_i $~-- частота появления буквы $i$ в естественном языке.
 Теоретическое обоснование метода индекса совпадений не является простым. Оно приведено в приложении~\ref{chap:coincide-index} к данному пособию.
 
 \example
