--- a/prime-check-ferma.tex
+++ b/prime-check-ferma.tex
@@ -1,7 +1,7 @@
 \subsection{Тест Ферма}\label{section-prime-check-ferma}\index{тест!Ферма}
 \selectlanguage{russian}
 
-Многие тесты на простоту основаны на малой теореме Ферма\index{теорема!Ферма малая}~\cite{Vinberg:2008}: если $n$ -- простое число и $a$ -- целое число, не делящееся на $n$, то
+Многие тесты на простоту основаны на малой теореме Ферма\index{теорема!Ферма малая}~\cite{Vinberg:2008}: если $n$~-- простое число и $a$~-- целое число, не делящееся на $n$, то
 \begin{equation}\label{eq:prime-check-ferma}
     a^{n-1} \equiv 1 \mod n.
 \end{equation}
