--- a/prime-check-miller-rabin.tex
+++ b/prime-check-miller-rabin.tex
@@ -12,9 +12,9 @@
 \begin{algorithm}[ht]
     \caption{Вероятностный тест Миллера~---~Рабина проверки числа на простоту\label{miller-rabin}}
     \begin{algorithmic}
-        \STATE Вход: нечётное $n>1$ для проверки на простоту и $t$ -- параметр надёжности.
+        \STATE Вход: нечётное $n>1$ для проверки на простоту и $t$~-- параметр надёжности.
         \STATE Выход: \textsc{Составное} или \textsc{Псевдопростое}.
-        \STATE $n - 1 = 2^s r, ~ r$ -- нечётное.
+        \STATE $n - 1 = 2^s r, ~ r$~-- нечётное.
         \FOR{~$j = 1$ ~\textbf{to}~ $t$~}
             \STATE Выбрать случайное число $a \in [2, n-2]$.
             \IF{~$(a_0 = a^r ~\neq~ \pm 1 \mod n)$ ~\textbf{and} \\
@@ -28,7 +28,7 @@
 
 Сложность алгоритма Миллера~---~Рабина для $k$-битового числа $n$ имеет порядок
     \[ O(t k^3) \]
-двоичных операций, где $t$ -- количество раундов.
+двоичных операций, где $t$~-- количество раундов.
 
 \example
 В таблице~\ref{tab-miller-rabin-sample} содержится пример теста Миллера~---~Рабина для $n = 169, ~ n-1 = 21 \cdot 2^3$.
