--- a/rsa.tex
+++ b/rsa.tex
@@ -3,7 +3,7 @@
 
 \subsection{Шифрование}\index{шифр!RSA|(}
 
-В 1978 г. Рональд Рив\'{е}ст, Ади Шамир и Леонард Адлеман (\langen{Ronald Linn Rivest, Adi Shamir, Leonard Max Adleman}, \cite{RSA:1978}) предложили алгоритм, обладающий рядом интересных для криптографии свойств. На его основе была построена первая система шифрования с открытым ключом, получившая название по первым буквам фамилий авторов -- система RSA.
+В 1978 г. Рональд Рив\'{е}ст, Ади Шамир и Леонард Адлеман (\langen{Ronald Linn Rivest, Adi Shamir, Leonard Max Adleman}, \cite{RSA:1978}) предложили алгоритм, обладающий рядом интересных для криптографии свойств. На его основе была построена первая система шифрования с открытым ключом, получившая название по первым буквам фамилий авторов~-- система RSA.
 
 Рассмотрим принцип построения криптосистемы шифрования RSA с открытым ключом.
 
@@ -15,7 +15,7 @@
             \item Вычислить функцию Эйлера\index{функция!Эйлера}\footnote{См. раздел~\ref{section-group-multiplicative} в приложении.} $\varphi(n) = (p-1)(q-1)$.
             \item Выбрать случайное целое число $e \in [3, \varphi(n)-1]$, взаимно простое с $\varphi(n)$: $~ \gcd(e, \varphi(n)) = 1$.
             \item Вычислить число $d$ такое, что $d \cdot e = 1 \mod \varphi(n)$.
-            \item Закрытым ключом будем называть пару чисел $n$ и $d$, открытым ключом\footnote{Некоторые авторы считают некорректным включать число $n$ в состав закрытого ключа, так как оно уже входит в открытый. Авторы настоящего пособия включают число $n$ в состав закрытого ключа, что в результате позволяет в дальнейшем использовать для расшифрования и создания электронной подписи данные \emph{только} из закрытого ключа, не прибегая к <<помощи>> данных из открытого ключа.} -- пару чисел $n$ и $e$.
+            \item Закрытым ключом будем называть пару чисел $n$ и $d$, открытым ключом\footnote{Некоторые авторы считают некорректным включать число $n$ в состав закрытого ключа, так как оно уже входит в открытый. Авторы настоящего пособия включают число $n$ в состав закрытого ключа, что в результате позволяет в дальнейшем использовать для расшифрования и создания электронной подписи данные \emph{только} из закрытого ключа, не прибегая к <<помощи>> данных из открытого ключа.}~-- пару чисел $n$ и $e$.
         \end{enumerate}
 
     \item \textbf{Шифрование с использованием открытого ключа.}
@@ -23,7 +23,7 @@
             \item Сообщение представляют целым числом $m \in [1, n-1]$.
             \item Шифртекст вычисляется как
                 \[ c = m^e \mod n. \]
-                Шифртекст -- также целое число из диапазона $[1, n-1]$.
+                Шифртекст~-- также целое число из диапазона $[1, n-1]$.
         \end{enumerate}
     \item \textbf{Расшифрование с использованием закрытого ключа.}
 
@@ -49,7 +49,7 @@
 	      & = m \mod p.
 \end{array}\]
 
-Если же $m$ и $p$ не являются взаимно простыми, то есть $p$ является делителем $m$ (помним, что $p$ -- простое число), то $m = 0 \mod p$ и $c^{d} = 0 \mod p$.
+Если же $m$ и $p$ не являются взаимно простыми, то есть $p$ является делителем $m$ (помним, что $p$~-- простое число), то $m = 0 \mod p$ и $c^{d} = 0 \mod p$.
 
 В результате, для любых $m$ верно, что $c^{d} = m \mod p$. Аналогично доказывается, что $c^{d} = m \mod q$. Из китайской теоремы об остатках\index{теорема!китайская об остатках} (см. раздел~\ref{section-chinese-remainder-theorem} в приложении) следует:
 \[\begin{cases}
@@ -92,34 +92,34 @@
 Предположим, что пользователь $A$ не шифрует свои сообщения, но хочет посылать их в виде открытых текстов с подписью. Для этого надо создать электронную подпись (ЭП). Это можно сделать, используя систему RSA. При этом должны быть выполнены следующие требования:
 \begin{itemize}
     \item вычисление подписи от сообщения является вычислительно лёгкой задачей;
-    \item фальсификация подписи при неизвестном закрытом ключе -- вычислительно трудная задача;
+    \item фальсификация подписи при неизвестном закрытом ключе~-- вычислительно трудная задача;
     \item подпись должна быть проверяемой открытым ключом.
 \end{itemize}
 
-Создание параметров ЭП RSA производится так же, как и для схемы шифрования RSA. Пусть $A$ имеет закрытый ключ $\SK = (n, d)$, а получатель (проверяющий) $B$ -- открытый ключ $\PK = (e,n)$ пользователя $A$.
+Создание параметров ЭП RSA производится так же, как и для схемы шифрования RSA. Пусть $A$ имеет закрытый ключ $\SK = (n, d)$, а получатель (проверяющий) $B$~-- открытый ключ $\PK = (e,n)$ пользователя $A$.
 
 \begin{enumerate}
     \item $A$ вычисляет подпись сообщения $m \in [1,n-1]$ как
         \[ s = m^{d} \mod n \]
         на своём закрытом ключе $\SK$.
-    \item $A$ посылает $B$ сообщение в виде $(m, s)$, где $m$ -- открытый текст, $s$ -- подпись.
-    \item $B$ принимает сообщение $(m, s)$, возводит $s$ в степень $e$ по модулю $n$ ($e, n$ -- часть открытого ключа). В результате вычислений $B$ получает открытый текст:
+    \item $A$ посылает $B$ сообщение в виде $(m, s)$, где $m$~-- открытый текст, $s$~-- подпись.
+    \item $B$ принимает сообщение $(m, s)$, возводит $s$ в степень $e$ по модулю $n$ ($e, n$~-- часть открытого ключа). В результате вычислений $B$ получает открытый текст:
         \[ s^{e} \mod n = \left( m^{d} \mod n \right)^{e} \mod n = m. \]
     \item $B$ cравнивает полученное значение с первой частью сообщения. При полном совпадении подпись принимается.
 \end{enumerate}
 Недостаток данной системы создания ЭП состоит в том, что подпись $m^{d} \mod n$ имеет большую длину, равную длине открытого сообщения $m$.
 
-Для уменьшения длины подписи применяется другой вариант процедуры: вместо сообщения $m$ отправитель подписывает $h(m)$, где $h(x)$ -- известная криптографическая хэш-функция. Модифицированная процедура состоит в следующем.
+Для уменьшения длины подписи применяется другой вариант процедуры: вместо сообщения $m$ отправитель подписывает $h(m)$, где $h(x)$~-- известная криптографическая хэш-функция. Модифицированная процедура состоит в следующем.
 
 \begin{enumerate}
-    \item $A$ посылает $B$ сообщение в виде $(m, s)$, где $m$ -- открытый текст,
+    \item $A$ посылает $B$ сообщение в виде $(m, s)$, где $m$~-- открытый текст,
         \[ s = h(m)^d \mod n \]
-        -- подпись.
+       ~-- подпись.
     \item $B$ принимает сообщение $(m, s)$, вычисляет хэш $h(m)$ и возводит подпись в степень:
         \[ h_1 = s^e \mod n. \]
     \item $B$ сравнивает значения $h(m)$ и $h_1$. При равенстве
         \[ h(m) = h_1 \]
-        подпись считается подлинной, при неравенстве -- фальсифицированной.
+        подпись считается подлинной, при неравенстве~-- фальсифицированной.
 \end{enumerate}
 
 
@@ -164,7 +164,7 @@
     \item Выбирается случайное $r$.
     \item Для открытого текста $m$ вычисляется
         \[ x = m \oplus H_1(r), ~ y = r \oplus H_2(x), \]
-        где $H_1$ и $H_2$ -- криптографические хэш-функции.
+        где $H_1$ и $H_2$~-- криптографические хэш-функции.
     \item Сообщение $M = x ~\|~ y$ далее шифруется RSA.
 \end{enumerate}
 
@@ -174,14 +174,14 @@
 В модификации OAEP+ $x$ вычисляется как
     \[ x = \left( m \oplus H_1 \left( r \right) \right) \Vert \left. H_3 \left( m \Vert r \right) \right. .\]
 
-В описанной выше схеме ЭП под $m$ понимается хэш открытого текста, вместо шифрования выполняется подписание, вместо расшифрования -- проверка подписи.
+В описанной выше схеме ЭП под $m$ понимается хэш открытого текста, вместо шифрования выполняется подписание, вместо расшифрования~-- проверка подписи.
 
 
 \subsection{Выбор параметров и оптимизация}
 
 \subsubsection{Выбор экспоненты $e$}
 
-В случайно выбранной экспоненте $e$ c битовой длиной $k = \lceil \log_2 e \rceil$ одна половина битов в среднем равна 0, другая -- 1. При возведении в степень $m^e \mod n$ по методу <<возводи в квадрат и перемножай>> получится $k-1$ возведений в квадрат и в среднем
+В случайно выбранной экспоненте $e$ c битовой длиной $k = \lceil \log_2 e \rceil$ одна половина битов в среднем равна 0, другая~-- 1. При возведении в степень $m^e \mod n$ по методу <<возводи в квадрат и перемножай>> получится $k-1$ возведений в квадрат и в среднем
  $\frac{1}{2}(k-1)$ умножений.
 
 Если выбрать $e$, содержащую малое число единиц в двоичной записи, то число умножений уменьшится до числа единиц в $e$.
@@ -219,7 +219,7 @@
 
 \subsubsection{Длина ключей}
 
-В 2005 году было разложено 663-битовое число вида RSA. Время разложения в эквиваленте составило 75 лет вычислений одного ПК. Самые быстрые алгоритмы факторизации -- субэкспоненциальные\index{задача!факторизации}. Минимальная рекомендуемая длина модуля $n$ = 1024 бита, но лучше использовать 2048 или 4096 бит.
+В 2005 году было разложено 663-битовое число вида RSA. Время разложения в эквиваленте составило 75 лет вычислений одного ПК. Самые быстрые алгоритмы факторизации~-- субэкспоненциальные\index{задача!факторизации}. Минимальная рекомендуемая длина модуля $n$ = 1024 бита, но лучше использовать 2048 или 4096 бит.
 
 В июле 2012 года NIST опубликовала отчёт~\cite{NIST:SP800:57}, который включал в себя таблицу сравнения надёжности ключей разных длин для криптосистем, относящихся к разным классам. Таблица была составлена согласно как известным на тот момент атакам на классы криптосистем, так и на конкретные шифры (см. таблицу~\ref{table:aesrsakeycompare}).
 
@@ -239,8 +239,8 @@
 \caption{Сравнимые длины ключей блочных симметричных шифров и ключевых параметров асимметричных шифров~\cite{NIST:SP800:57}}\label{table:aesrsakeycompare}
 \end{table}
 
-В приложении~\ref{section-modular-arithmetic} показано, что битовая сложность (количество битовых операций) вычисления произвольной степени $a^b \mod n$ является кубической $O(k^3)$, а возведения в квадрат $a^2 \mod n$ и умножения $a b \mod n$ -- квадратичной $O(k^2)$, где $k$ -- битовая длина чисел $a,b,n$.
+В приложении~\ref{section-modular-arithmetic} показано, что битовая сложность (количество битовых операций) вычисления произвольной степени $a^b \mod n$ является кубической $O(k^3)$, а возведения в квадрат $a^2 \mod n$ и умножения $a b \mod n$~-- квадратичной $O(k^2)$, где $k$~-- битовая длина чисел $a,b,n$.
 
-%Увеличение длины модуля $n$ в 2 раза увеличивает время возведения в степень в $2^3$ раз для большой экспоненты $e$, а для маленькой экспоненты -- в $2^2$ раза.
+%Увеличение длины модуля $n$ в 2 раза увеличивает время возведения в степень в $2^3$ раз для большой экспоненты $e$, а для маленькой экспоненты~-- в $2^2$ раза.
 
 \index{криптосистема!RSA|)}
