--- a/secret-sharing-shamirs.tex
+++ b/secret-sharing-shamirs.tex
@@ -48,7 +48,7 @@
 \example
 Приведём схему Шамира в поле $\GF{p}$. Для разделения секрета $M$ в $(3,n)$-пороговой схеме используется многочлен степени $3-1=2$.
     \[ f(x) = a x^2 + b x + M \mod p, \]
-где $p$ -- простое\index{число!простое} число. Пусть $p=23$. Восстановим секрет $M$ по \emph{теням}
+где $p$~-- простое\index{число!простое} число. Пусть $p=23$. Восстановим секрет $M$ по \emph{теням}
     \[ (1,14), (4,21), (15,6). \]
 
 Последовательно вычисляем
