--- a/secret-sharing.tex
+++ b/secret-sharing.tex
@@ -44,7 +44,7 @@
     C_2 = \{ U_1, U_3 \}, \\
     C_3 = \{ U_2, U_3, U_4 \}. \\
 \end{array} \]
-Распределение частичных секретов между ними представлено в виде таблицы~\ref{tab:secret-share-coalition-1}, в которой введены следующие обозначения: $a_1, b_1, c_2, c_3$ -- случайные числа из кольца $\Z_M$. В строках таблицы содержатся частичные секреты каждого из пользователей, в столбцах таблицы показаны частичные секреты, соответствующие каждой из коалиций.
+Распределение частичных секретов между ними представлено в виде таблицы~\ref{tab:secret-share-coalition-1}, в которой введены следующие обозначения: $a_1, b_1, c_2, c_3$~-- случайные числа из кольца $\Z_M$. В строках таблицы содержатся частичные секреты каждого из пользователей, в столбцах таблицы показаны частичные секреты, соответствующие каждой из коалиций.
 
 \begin{table}[!ht]
     \centering
@@ -53,10 +53,10 @@
         \hline
               & $C_1 = \{ U_1, U_2 \}$ & $C_2 = \{U_1, U_3 \}$ & $C_3 = \{ U_2, U_3, U_4 \}$ \\
         \hline \hline
-        $U_1$ & $a_1$     & $b_1$     & -- \\
-        $U_2$ & $K - a_1$ & --        & $c_2$ \\
-        $U_3$ & --        & $K - b_1$ & $c_3$  \\
-        $U_4$ & --        & --        & $K - c_2 - c_3$ \\
+        $U_1$ & $a_1$     & $b_1$     &~-- \\
+        $U_2$ & $K - a_1$ &~--        & $c_2$ \\
+        $U_3$ &~--        & $K - b_1$ & $c_3$  \\
+        $U_4$ &~--        &~--        & $K - c_2 - c_3$ \\
         \hline
     \end{tabular}
 \end{table}
