--- a/CAs.tex
+++ b/CAs.tex
@@ -6,12 +6,12 @@
 \begin{enumerate}
     \item Существует удостоверяющий центр (УЦ) верхнего уровня\index{удостоверяющий центр!верхнего уровня}, корневой УЦ\index{удостоверяющий центр!корневой} (\langen{root certificate authority, root CA}), обладающий парой из закрытого и открытого ключей. Открытый ключ УЦ верхнего уровня распространяется среди всех пользователей, причём все пользователи \emph{доверяют УЦ}. Это означает, что:
         \begin{itemize}
-            \item УЦ -- <<хороший>>, то есть обеспечивает надёжное хранение закрытого ключа, не пытается фальсифицировать и скомпрометировать свои ключи;
+            \item УЦ~-- <<хороший>>, то есть обеспечивает надёжное хранение закрытого ключа, не пытается фальсифицировать и скомпрометировать свои ключи;
             \item имеющийся у пользователей открытый ключ УЦ действительно принадлежит УЦ.
         \end{itemize}
         В массовых информационных и интернет-системах открытые ключи многих корневых УЦ встроены в дистрибутивы и пакеты обновлений ПО. Доверие пользователей неявно проявляется в их уверенности в том, что открытые ключи корневых УЦ, включённые в ПО, не фальсифицированы и не скомпрометированы. \emph{Де-факто пользователи доверяют а) распространителям ПО и обновлений, б) корневому УЦ.}\index{доверие}
 
-        Назначение УЦ верхнего уровня -- проверка принадлежности и подписание открытых ключей удостоверяющих центров второго уровня (\langen{certificate authority, certification authority, CA}), а также организаций и сервисов. УЦ подписывает своим закрытым ключом следующее сообщение:
+        Назначение УЦ верхнего уровня~-- проверка принадлежности и подписание открытых ключей удостоверяющих центров второго уровня (\langen{certificate authority, certification authority, CA}), а также организаций и сервисов. УЦ подписывает своим закрытым ключом следующее сообщение:
         \begin{itemize}
             \item название и URI УЦ нижележащего уровня или организации/сервиса;
             \item значение сгенерированного открытого ключа и название алгоритма соответствующей криптосистемы с открытым ключом;
