--- a/Feistel_cipher.tex
+++ b/Feistel_cipher.tex
@@ -15,7 +15,7 @@
     R_{k+1} = L_{k} \oplus F\left( R_k, K_k \right).
 \end{array}\]
 
-Результатом шифрования является конкатенация последних выходных блоков $L_n$ и $R_n$, где $n$ -- число раундов шифрования.
+Результатом шифрования является конкатенация последних выходных блоков $L_n$ и $R_n$, где $n$~-- число раундов шифрования.
 
 Несложно показать, что зная раундовые ключи $K_1, \dots, K_n$ и результат шифрования $L_n$ и $R_n$, можно восстановить открытый текст. В частности, для каждого раунда:
 \[\begin{array}{l}
