--- a/GOST_R_34.10-2001.tex
+++ b/GOST_R_34.10-2001.tex
@@ -18,9 +18,9 @@ $A$ формирует открытый ключ следующим образо
             a = 3 K \mod p, \\
             b = 2 K \mod p. \\
         \end{array} \]
-    \item Пусть $m$ -- порядок группы точек эллиптической кривой $\E(\Z_p)$. ~Пользователь $A$ подбирает число $n$ и простое\index{число!простое} число $q$ такие, что
+    \item Пусть $m$~-- порядок группы точек эллиптической кривой $\E(\Z_p)$. ~Пользователь $A$ подбирает число $n$ и простое\index{число!простое} число $q$ такие, что
         \[ m = n q, ~ 2^{254} < q < 2^{256}, ~ n \geq 1, \]
-        где $q$ -- делитель порядка группы.
+        где $q$~-- делитель порядка группы.
 
         В циклической подгруппе порядка $q$ выбирается точка
         \[ P \in \E(\Z_p): ~ q P \equiv 0. \]
@@ -31,7 +31,7 @@ $A$ формирует открытый ключ следующим образо
 
 Теперь сторона $A$ создаёт свою цифровую подпись $S(M)$ сообщения $M$, выполняя следующие действия.
 \begin{enumerate}
-    \item Вычисляет $\alpha = h(M)$, где $h$ -- криптографическая хэш-функция, определённая стандартом ГОСТ Р 34.11-94. В российском стандарте длина $h(M)$ равна 256 бит.
+    \item Вычисляет $\alpha = h(M)$, где $h$~-- криптографическая хэш-функция, определённая стандартом ГОСТ Р 34.11-94. В российском стандарте длина $h(M)$ равна 256 бит.
     \item Вычисляет $e = \alpha \mod q$.
     \item Случайно выбирает число $k$ и вычисляет точку
         \[ C = k P = (x_c, y_c). \]
@@ -57,7 +57,7 @@ $A$ формирует открытый ключ следующим образо
     \item Вычисляет точку:
         \[ \tilde{C} = a P + b Q = (\tilde{x}_c, \tilde{y}_c). \]
         Если подпись верна, то должны получить исходную точку $C$.
-    \item Проверяет условие $\tilde{x}_{c} \mod q = r$. Если условие выполняется, то подпись принимается, в противном случае -- отвергается.
+    \item Проверяет условие $\tilde{x}_{c} \mod q = r$. Если условие выполняется, то подпись принимается, в противном случае~-- отвергается.
 \end{enumerate}
 
 Рассмотрим вычислительную сложность вскрытия подписи. Предположим, что криптоаналитик ставит своей задачей определение закрытого ключа $d$. Как известно, эта задача является трудной. Для подтверждения этого можно привести такой факт. Был поставлен следующий эксперимент: выбрали число $p = 2^{97}$ и 1200 персональных компьютеров, которые работали над этой задачей в 16 странах мира, используя процессоры с тактовой частотой 200 МГц. Задача была решена за 53 дня круглосуточной работы. Если взять $p = 2^{256}$, то на решение такой задачи при наличии одного компьютера с частотой процессора 2 ГГц потребуется $10^{22}$ лет.
