--- a/MAC.tex
+++ b/MAC.tex
@@ -10,11 +10,11 @@
     \item имитовставку невозможно фальсифицировать.
 \end{itemize}
 
-Имитовставка может быть построена либо на симметричной криптосистеме (в таком случае обе стороны имеют один общий секретный ключ), либо на криптосистеме с открытым ключом, в которой $A$ использует свой секретный ключ, а $B$ -- открытый ключ отправителя $A$.
+Имитовставка может быть построена либо на симметричной криптосистеме (в таком случае обе стороны имеют один общий секретный ключ), либо на криптосистеме с открытым ключом, в которой $A$ использует свой секретный ключ, а $B$~-- открытый ключ отправителя $A$.
 
 Наиболее универсальный способ аутентификации сообщений через схемы ЭП на криптосистемах с открытым ключом состоит в том, что сторона $A$ отправляет стороне $B$ сообщение
     \[ m ~\|~ \textrm{ЭП}(K, h(m)), \]
-где $h(m)$ -- криптографическая хэш-функция в схеме ЭП и $\|$ является операцией конкатенации битовых строк. Для аутентификации большого объёма информации этот способ не подходит из-за медленной операции вычисления подписи. Например, вычисление одной ЭП на криптосистемах с открытым ключом занимает порядка 10 мс на ПК. При средней длине IP-пакета 1 Кбайт, для каждого из которых требуется вычислить имитовставку, получим максимальную пропускную способность в $\frac{1 ~ \text{Кбайт}}{10 ~ \text{мс}} = 100$ Кбайт/с.
+где $h(m)$~-- криптографическая хэш-функция в схеме ЭП и $\|$ является операцией конкатенации битовых строк. Для аутентификации большого объёма информации этот способ не подходит из-за медленной операции вычисления подписи. Например, вычисление одной ЭП на криптосистемах с открытым ключом занимает порядка 10 мс на ПК. При средней длине IP-пакета 1 Кбайт, для каждого из которых требуется вычислить имитовставку, получим максимальную пропускную способность в $\frac{1 ~ \text{Кбайт}}{10 ~ \text{мс}} = 100$ Кбайт/с.
 
 Поэтому для большого объёма данных, которые нужно аутентифицировать, $A$ и $B$ создают общий секретный ключ аутентификации $K$. Далее имитовставка вычисляется либо с помощью модификации блочного шифра, либо с помощью криптографической хэш-функции.
 
@@ -36,7 +36,7 @@
 
 Вычисление имитовставки от пакета информации $m$ с использованием блочного шифра $E$ осуществляется в виде:
     \[ \MAC(K, m) = E_K(H(m)), \]
-где $H$ -- криптографическая хэш-функция.
+где $H$~-- криптографическая хэш-функция.
 
 Имитовставка на основе хэш-функции обозначается $\HMAC$ (Hash-based MAC)\index{HMAC} и стандартно вычисляется в виде:
     \[ \HMAC(K, m) = H(K \| H(K \| m)). \]
@@ -46,9 +46,9 @@
 
 В протоколе IPsec\index{протокол!IPsec} используется следующий способ вычисления кода аутентификации:
     \[ \HMAC(K, m) = H((K \oplus ~ \textrm{opad}) ~\|~ H((K \oplus ~ \textrm{ipad}) ~\|~ m)), \]
-где $\textrm{opad}$ -- последовательность повторяющихся байтов
+где $\textrm{opad}$~-- последовательность повторяющихся байтов
     \[ \text{\texttt{0x5C}}= [01011100]_2, \]
-$\textrm{ipad}$ -- последовательность повторяющихся байтов
+$\textrm{ipad}$~-- последовательность повторяющихся байтов
     \[ \text{\texttt{0x36}} = [00110110]_2, \]
 которые инвертируют половину битов ключа. Считается, что использование различных значений ключа повышает криптостойкость.
 
@@ -64,7 +64,7 @@ $\textrm{ipad}$ -- последовательность повторяющихс
 	H_i = f(H_{i-1}, m_i), i \in \{ 1, 2, \dots, n \},\\
 	H(m) \equiv H_n,
 \end{array}\]
-где $f$ -- известная сжимающая функция.
+где $f$~-- известная сжимающая функция.
 
 Пусть имитовставка использует одинарное хэширование с ключом:
     \[ \MAC(K, m) = H(K \| m) = H (m_0 = K \| m_1 \| m_2 \| \dots \| m_n). \]
