--- a/aes_math.tex
+++ b/aes_math.tex
@@ -39,7 +39,7 @@
 \example
 В алгоритме блочного шифрования AES байты рассматриваются как элементы поля Галуа $\GF{2^8}$. Сложим байты $\mathrm{'57'}$ и $\mathrm{'83'}$. Представляя их многочленами, находим:
     \[ (x^6 + x^4 + x^2 + x + 1) + (x^7 + x + 1) = x^7 + x^6 + x^4 + x^2, \]
-или в двоичной записи --
+или в двоичной записи~--
     \[ 01010111 \oplus 10000011 = 11010100 = \mathrm{'D4'}. \]
 Получили $\mathrm{'57'} + \mathrm{'83'} = \mathrm{'D4'}$.
 \exampleend
