--- a/blockchain.tex
+++ b/blockchain.tex
@@ -1,7 +1,7 @@
 \section{Blockchain (цепочка блоков)}\label{section-blockchain}\index{Blockchain|(}
 \selectlanguage{russian}
 
-Когда у вас есть знания о том, что такое криптографически стойкая хэш-функция, понять, что такое цепочка блоков (\langen{blockchain}), очень просто. Blockchain -- это последовательный набор блоков (или же, в более общем случае, ориентированный граф), каждый следующий блок в котором включает в качестве хэшируемой информации значение хэш-функции от предыдущего блока.
+Когда у вас есть знания о том, что такое криптографически стойкая хэш-функция, понять, что такое цепочка блоков (\langen{blockchain}), очень просто. Blockchain~-- это последовательный набор блоков (или же, в более общем случае, ориентированный граф), каждый следующий блок в котором включает в качестве хэшируемой информации значение хэш-функции от предыдущего блока.
 
 Технология blockchain используется для организации журналов транзакций, при этом под транзакцией может пониматься что угодно: финансовая транзакция (перевод между счетами), аудит событий аутентификации и авторизации, записи о выполненных ТО и ТУ автомобилей. При этом событие считается случившимся, если запись о нём включена в журнал.
 
@@ -42,7 +42,7 @@
 
 Если у нас есть доверенный центр, то мы просто поручаем ему через определённый промежуток времени (или же через определённый набор транзакций) формировать новый блок, снабжая его не только хэш-суммой, но и своей электронной подписью. Каждый клиент системы имеет возможность проверить, что все блоки в цепочке сгенерированы доверенным центром и никем иным. В предположении, что доверенный центр не скомпрометирован, возможности модификации журнала злоумышленником нет.
 
-Использование технологии blockchain в этом случае является избыточным. Если у нас есть доверенный центр, можно просто обращаться к нему с целью подписать каждую транзакцию, добавив к ней время и порядковый номер. Номер обеспечивает порядок и невозможность добавления (удаления) транзакций из цепочки, электронная подпись доверенного центра -- невозможность модификации конкретных транзакций.
+Использование технологии blockchain в этом случае является избыточным. Если у нас есть доверенный центр, можно просто обращаться к нему с целью подписать каждую транзакцию, добавив к ней время и порядковый номер. Номер обеспечивает порядок и невозможность добавления (удаления) транзакций из цепочки, электронная подпись доверенного центра~-- невозможность модификации конкретных транзакций.
 
 \subsection{Централизованный blockchain с недоверенным центром}
 
@@ -58,11 +58,11 @@
 
 \subsection{Децентрализованный blockchain}
 
-Наибольший интерес для нас -- и наименьший для компаний, продающих blockchain-решения, -- представляет децентрализованная система blockchain без выделенных центров генерации блоков. Каждый участник может взять набор транзакций, ожидающих включения в журнал, и сформировать новый блок. Более того, в системах типа Bitсoin\index{Bitcoin} такой участник (будем его назвать <<майнером>>, от \langen{to mine} -- копать) ещё и получит премию в виде определённой суммы и/или комиссионных от принятых в блок транзакций.
+Наибольший интерес для нас~-- и наименьший для компаний, продающих blockchain-решения,~-- представляет децентрализованная система blockchain без выделенных центров генерации блоков. Каждый участник может взять набор транзакций, ожидающих включения в журнал, и сформировать новый блок. Более того, в системах типа Bitсoin\index{Bitcoin} такой участник (будем его назвать <<майнером>>, от \langen{to mine}~-- копать) ещё и получит премию в виде определённой суммы и/или комиссионных от принятых в блок транзакций.
 
 Но нельзя просто так взять и сформировать блок в децентрализованных системах. Надёжность таких систем основывается именно на том, что новый блок нельзя сформировать быстрее (в среднем) чем за определённое время. Например, за 10 минут (Bitcoin). Это обеспечивается механизмом, который получил название доказательство работы (\langen{proof of work, PoW}).
 
-Механизм основывается на следующей идее. Пусть есть криптографически стойкая хэш-функция $h(x)$, и задан некоторый параметр $t$ (от \langen{target} -- цель). $0 < t < 2^{n}$, где $n$ -- размер выхода хэш-функции в битах. Корректным новым блоком blockchain-сеть будет признавать только такой, значение хэш-суммы которого меньше текущего заданного параметра $t$. В этом случае алгоритм работы майнера выглядит следующий образом:
+Механизм основывается на следующей идее. Пусть есть криптографически стойкая хэш-функция $h(x)$, и задан некоторый параметр $t$ (от \langen{target}~-- цель). $0 < t < 2^{n}$, где $n$~-- размер выхода хэш-функции в битах. Корректным новым блоком blockchain-сеть будет признавать только такой, значение хэш-суммы которого меньше текущего заданного параметра $t$. В этом случае алгоритм работы майнера выглядит следующий образом:
 \begin{itemize}
 	\item собрать из пула незафиксированных транзакций те, которые поместятся в 1 блок (1 мегабайт для сети Bitcoin\index{Bitcoin}) и имеют максимальную комиссию (решить задачу о рюкзаке\index{задача!о рюкзаке});
 	\item добавить в блок информацию о предыдущем блоке;
@@ -72,34 +72,34 @@
 	\begin{itemize}
 		\item обновить значение $r := r + 1$;
 		\item посчитать значение $h = h( \text{блок} || r)$;
-		\item если $h < t$, добавить в блок $r$ и считать блок сформированным, иначе -- повторить цикл.
+		\item если $h < t$, добавить в блок $r$ и считать блок сформированным, иначе~-- повторить цикл.
 	\end{itemize}
 \end{itemize}
 
-Для каждой итерации цикла вероятность получить корректный блок равна $t / 2^{n}$. Так как $t$ обычно мало, то майнерам нужно сделать большое количество итераций цикла, чтобы найти нужный $r$. При этом только один (обычно -- первый) из найденных блоков будет считаться корректным. Чем больше вычислительная мощность конкретного майнера, тем больше вероятность, что именно он первым сумеет найти нужный $r$.
+Для каждой итерации цикла вероятность получить корректный блок равна $t / 2^{n}$. Так как $t$ обычно мало, то майнерам нужно сделать большое количество итераций цикла, чтобы найти нужный $r$. При этом только один (обычно~-- первый) из найденных блоков будет считаться корректным. Чем больше вычислительная мощность конкретного майнера, тем больше вероятность, что именно он первым сумеет найти нужный $r$.
 
 Зная суммарную вычислительную мощность blockchain-сети, участники могут договориться о таком механизме изменения параметра $t$, чтобы время генерации нового корректного блока было примерно заданное время. Например, в сети Bitcoin параметр $t$ пересчитывается каждые 2016 блоков таким образом, чтобы среднее время генерации блока было 10 минут. Это позволяет адаптировать сеть к изменению количества участников, их вычислительных мощностей и к появлению новых механизмов вычисления хэш-функций.
 
 Кроме задания параметра $t$ можно оперировать другими величинами, так или иначе относящимися к мощности вычислений.
 \begin{itemize}
-	\item \textit{Hashrate} -- количество хэшей, которые считают за единицы времени конкретный майнер или сеть в целом. Например, в ноябре 2017 года общий hashrate для сети Bitcoin составлял примерно $7,7 \times 10^{18}$ хэшей в секунду.
-	\item \textit{Difficulty} -- сложность поиска корректного блока, выражаемая как $d = d_{const} / t$, где $d_{const}$ -- некоторая константа сложности, а $t$ -- текущая цель (\langen{target}). В отличие от параметра $t$, который падает с ростом вычислительной мощности сети, $d$ изменяется вместе с $hashrate$, что делает его более простым для восприятия и анализа человеком.
+	\item \textit{Hashrate}~-- количество хэшей, которые считают за единицы времени конкретный майнер или сеть в целом. Например, в ноябре 2017 года общий hashrate для сети Bitcoin составлял примерно $7,7 \times 10^{18}$ хэшей в секунду.
+	\item \textit{Difficulty}~-- сложность поиска корректного блока, выражаемая как $d = d_{const} / t$, где $d_{const}$~-- некоторая константа сложности, а $t$~-- текущая цель (\langen{target}). В отличие от параметра $t$, который падает с ростом вычислительной мощности сети, $d$ изменяется вместе с $hashrate$, что делает его более простым для восприятия и анализа человеком.
 \end{itemize}
 
-В случае примерно одновременной генерации следующего блока двумя и более майнерами (когда информация о новом блоке публикуется вторым майнером до того, как ему придёт информация о новом блоке от первого) в направленном графе блоков происходит разветвление. Далее каждый из майнеров выбирает один из новых блоков (например -- какой первый увидели) и пытается сгенерировать новый блок на основе выбранного, продолжая <<ответвление>> в графе. В конце концов одна из двух таких цепочек становится длиннее (та, которую выбрало большее число майнеров), и именно она признаётся основной.
+В случае примерно одновременной генерации следующего блока двумя и более майнерами (когда информация о новом блоке публикуется вторым майнером до того, как ему придёт информация о новом блоке от первого) в направленном графе блоков происходит разветвление. Далее каждый из майнеров выбирает один из новых блоков (например~-- какой первый увидели) и пытается сгенерировать новый блок на основе выбранного, продолжая <<ответвление>> в графе. В конце концов одна из двух таких цепочек становится длиннее (та, которую выбрало большее число майнеров), и именно она признаётся основной.
 
-В случае нормального поведения системы на включение конкретных транзакций в блоки это влияет мало, так как каждый из добросовестных майнеров следует одному и тому же алгоритму включения транзакций в блок (например, в сети Bitcoin\index{Bitcoin} -- алгоритму максимизации комиссии за блок). Однако можно предположить, что какой-нибудь злоумышленник захочет <<модерировать>> распределённый blockchain, включая или не включая в блоки транзакции по своему выбору. Предположим, что доля вычислительных ресурсов злоумышленника (направленных на генерацию нового блока) равна $p, 0 < p < 1/2$. В этом случае каждый следующий сгенерированный блок с вероятностью $p$ будет сгенерирован мощностями злоумышленника. Это позволит ему включать в блоки те транзакции, которые другие майнеры включать не захотели.
+В случае нормального поведения системы на включение конкретных транзакций в блоки это влияет мало, так как каждый из добросовестных майнеров следует одному и тому же алгоритму включения транзакций в блок (например, в сети Bitcoin\index{Bitcoin}~-- алгоритму максимизации комиссии за блок). Однако можно предположить, что какой-нибудь злоумышленник захочет <<модерировать>> распределённый blockchain, включая или не включая в блоки транзакции по своему выбору. Предположим, что доля вычислительных ресурсов злоумышленника (направленных на генерацию нового блока) равна $p, 0 < p < 1/2$. В этом случае каждый следующий сгенерированный блок с вероятностью $p$ будет сгенерирован мощностями злоумышленника. Это позволит ему включать в блоки те транзакции, которые другие майнеры включать не захотели.
 
 Но позволит ли это злоумышленнику не включать что-то в цепочку транзакций? Нет. Потому что после его блока с вероятностью $1 - p$ будет следовать блок <<обычного>> майнера, который с радостью (пропорциональной комиссии-награде) включит все транзакции в свой блок.
 
 Однако ситуация меняется, если мощности злоумышленника составляют более 50\% от мощности сети. В этом случае, если после блока злоумышленника был с вероятностью $1 - p$ сгенерирован <<обычный>> блок, злоумышленник его может просто проигнорировать и продолжать генерировать новые блоки, как будто он единственный майнер в сети. Тогда если среднее время генерации одного блока всеми мощностями $t$, то за время $T$ злоумышленник сможет сгенерировать $N_E = p \times T / t$, а легальные пользователи $N_L = (1 - p) \times T / t$ блоков, $N_E > N_L$. Даже если с некоторой вероятностью легальные пользователи сгенерируют 2 блока быстрее, чем злоумышленник один, последний всё равно <<догонит и перегонит>> <<легальную>> цепочку примерно за время $t / (2p - 1)$. Так как в blockchain есть договоренность, что за текущее состояние сети принимается наиболее длинная цепочка, именно цепочка злоумышленника всегда будет восприниматься правильной. Получается, что злоумышленник сможет по своему желанию включать или не включать транзакции в цепочки.
 
-Правда, пользоваться чужими деньгами злоумышленник всё равно не сможет -- так как все блоки транзакций проверяются на внутреннюю непротиворечивость и корректность всех включённых в блок транзакций.
+Правда, пользоваться чужими деньгами злоумышленник всё равно не сможет~-- так как все блоки транзакций проверяются на внутреннюю непротиворечивость и корректность всех включённых в блок транзакций.
 
 Кроме концепции <<доказательство работы>> используются и другие. Например, в подходе <<доказательство доли владения>> (\langen{proof of share, PoS}), который планировалось использовать в сетях Etherium и EmerCoin, вероятность генерации блока пропорциональна количеству средств на счетах потенциальных создателей нового блока. Это намного более энергоэффективно по сравнению с PoW, и, кроме того, связывает ответственность за надёжность и корректность генерации новых блоков с размером капитала (чем больше у нас средств, тем меньше мы хотим подвергать опасности систему). С другой стороны, это даёт дополнительную мотивацию концентрировать больше капитала в одних руках, что может привести к централизации системы.
 
 \subsection{Механизм внесения изменений в протокол}
-Любая система должна развиваться. Но у децентрализованных систем нельзя просто <<включить один рубильник>> и заставить участников системы работать по-новому -- иначе систему нельзя назвать полностью децентрализованной. Механизмы и способы внесения изменений могут выглядеть на первый взгляд нетривиально. Например:
+Любая система должна развиваться. Но у децентрализованных систем нельзя просто <<включить один рубильник>> и заставить участников системы работать по-новому~-- иначе систему нельзя назвать полностью децентрализованной. Механизмы и способы внесения изменений могут выглядеть на первый взгляд нетривиально. Например:
 
 \begin{enumerate}
 	\item апологеты системы предлагают изменения в правилах работы;
@@ -115,6 +115,6 @@
 
 Подводя итоги, Сатоши Накамото (псевдоним, \langen{Satoshi Nakamoto}), автор технологий blockchain и Bitcoin\index{Bitcoin}, сумел предложить работающий децентрализованный механизм, в котором и само поведение системы, и изменения к этой системе проходят через явный или неявный механизм поиска консенсуса участников. Для получения контроля над системой в целом злоумышленнику придётся получить контроль как минимум над 50\% всех мощностей системы (в случае PoW), а без этого можно лишь попытаться ограничить возможность использования системы конкретными участниками.
 
-Однако созданная технология не лишена недостатков. Существуют оценки, согласно которым использование метода PoW для системы bitcoin приводит к затратам энергии, сравнимой с потреблением электричества целыми городами или странами. Есть проблемы и с поиском консенсуса -- сложный механизм внесения изменений, как считают некоторые эксперты, может привести к проблемам роста (например, из-за ограниченности числа транзакций в блоке), и, в будущем, к отказу использования механизма как устаревшего и не отвечающего будущим задачам.
+Однако созданная технология не лишена недостатков. Существуют оценки, согласно которым использование метода PoW для системы bitcoin приводит к затратам энергии, сравнимой с потреблением электричества целыми городами или странами. Есть проблемы и с поиском консенсуса~-- сложный механизм внесения изменений, как считают некоторые эксперты, может привести к проблемам роста (например, из-за ограниченности числа транзакций в блоке), и, в будущем, к отказу использования механизма как устаревшего и не отвечающего будущим задачам.
 
 \index{Blockchain|)}
