--- a/double_and_triple_ciphering.tex
+++ b/double_and_triple_ciphering.tex
@@ -30,12 +30,12 @@
 
 Шифрование в 2DES\index{шифр!2DES}:
     \[ C = E_{K_1}( E_{K_2}(M)). \]
-Запишем $D_{K_1}(C) = E_{K_2}(M)$. Пусть время одного шифрования -- $T_E$, время одного сравнения блоков $T_{=} \approx 2^{-10} T_E$.
+Запишем $D_{K_1}(C) = E_{K_2}(M)$. Пусть время одного шифрования~-- $T_E$, время одного сравнения блоков $T_{=} \approx 2^{-10} T_E$.
 
 Атака для нахождения ключей без использования памяти занимает время
     \[ T = 2^{56 + 56} (T_E + T_{=}) \approx 2^{112} T_E. \]
 
-Можно заранее вычислить значения $E_{K_2}(M)$ для всех ключей и построить таблицу: индекс -- $E_{K_2}(M)$, значения поля -- набор ключей $K_2$, которые соответствуют этому значению. Атака для нахождения ключей требует времени
+Можно заранее вычислить значения $E_{K_2}(M)$ для всех ключей и построить таблицу: индекс~-- $E_{K_2}(M)$, значения поля~-- набор ключей $K_2$, которые соответствуют этому значению. Атака для нахождения ключей требует времени
     \[ T = 2 \cdot 2^{56} T_E + 2^{56} T_{=} \approx 2^{57} T_E \]
 и памяти $M = 56 \cdot 2^{56} \approx 2^{62}$ бит ($\approx 504$ Пбайт), учитывая прямой доступ по значению к возможным ключам. При нахождении соответствия берётся другая пара (открытый текст, шифртекст) и проверяется равенство для определения, являются ли ключи правильными или нет.
 
