--- a/el-gamal_protocol.tex
+++ b/el-gamal_protocol.tex
@@ -1,12 +1,12 @@
 \textbf{Протокол Эль-Гамаля}\index{протокол!Эль-Гамаля} относится к протоколам с аутентификацией одного из двух легальных пользователей.
 \selectlanguage{russian}
 \begin{enumerate}
-    \item Для начала стороны выбирают общие параметры $p, g$, где $p$ -- большое простое число, а $g$ -- примитивный элемент поля $\Z_p^*$.
+    \item Для начала стороны выбирают общие параметры $p, g$, где $p$~-- большое простое число, а $g$~-- примитивный элемент поля $\Z_p^*$.
     \item Сторона $B$ создаёт свои закрытый и открытый ключи:
             \[ \SK_B = b, ~ \PK_B = g^b \mod p, \]
-        $b$ -- случайное секретное число, $2 \leq b \leq p-1$.
+        $b$~-- случайное секретное число, $2 \leq b \leq p-1$.
 
-        Открытый ключ $\PK_B$ находится в общем открытом доступе для всех сторон, поэтому криптоаналитик $E$ не может подменить его -- подмена будет заметна.
+        Открытый ключ $\PK_B$ находится в общем открытом доступе для всех сторон, поэтому криптоаналитик $E$ не может подменить его~-- подмена будет заметна.
     \item Сторона $A$ вырабатывает свой секрет $x$, сеансовый ключ
             \[ K_A = (\PK_B)^x = g^{bx} \mod p \]
         и отправляет $B$:
