--- a/gsm3.tex
+++ b/gsm3.tex
@@ -18,14 +18,14 @@
 
 Обозначения на рис.~\ref{fig:gsm3} следующие:
 \begin{itemize}
-    \item $K$ -- общий секретный 128-битовый ключ SIM-карты и центра аутентификации;
-    \item $\textrm{RAND}$ -- 128-битовое псевдослучайное число, создаваемое центром аутентификации;
-    \item $\textrm{SQN}_{\textrm{T}}, \textrm{SQN}_{\textrm{Ц}}$ -- 48-битовые счётчики для защиты от атак воспроизведения;
-    \item $\textrm{AMF}$ -- 16-битовое значение окна для проверки синхронизации счётчиков;
-    \item $CK, IK, AK$ -- 128-битовые ключи шифрования данных $CK$, кода аутентификации данных $IK$, гаммы значения счётчика $AK$;
-    \item $\MAC, \textrm{XMAC}$ -- 128-битовые аутентификаторы центра SIM-карте;
-    \item $\textrm{RES}, \textrm{XRES}$ -- 128-битовые аутентификаторы SIM-карты центру;
-    \item $\textrm{AUTN}$ -- вектор аутентификации.
+    \item $K$~-- общий секретный 128-битовый ключ SIM-карты и центра аутентификации;
+    \item $\textrm{RAND}$~-- 128-битовое псевдослучайное число, создаваемое центром аутентификации;
+    \item $\textrm{SQN}_{\textrm{T}}, \textrm{SQN}_{\textrm{Ц}}$~-- 48-битовые счётчики для защиты от атак воспроизведения;
+    \item $\textrm{AMF}$~-- 16-битовое значение окна для проверки синхронизации счётчиков;
+    \item $CK, IK, AK$~-- 128-битовые ключи шифрования данных $CK$, кода аутентификации данных $IK$, гаммы значения счётчика $AK$;
+    \item $\MAC, \textrm{XMAC}$~-- 128-битовые аутентификаторы центра SIM-карте;
+    \item $\textrm{RES}, \textrm{XRES}$~-- 128-битовые аутентификаторы SIM-карты центру;
+    \item $\textrm{AUTN}$~-- вектор аутентификации.
 \end{itemize}
 
 Алгоритмы $fi$ не фиксированы стандартом и выбираются при реализациях.
