--- a/hills_cipher.tex
+++ b/hills_cipher.tex
@@ -3,7 +3,7 @@
 
 Если при шифровании преобразуются более двух букв открытого текста, то шифр называется \emph{полиграммным}\index{шифр!полиграммный}. Первый полиграммный шифр предложил Лестер Хилл в 1929 году (\langen{Lester Sanders Hill}, \cite{Hill:1929, Hill:1931}). Это был первый шифр, который позволял оперировать более чем тремя символами за один такт.
 
-В шифре Хилла текст предварительно преобразуют в цифровую форму и разбивают на последовательности (блоки) по $n$ последовательных цифр. Такие последовательности называются \emph{$n$-граммами}. Выбирают обратимую по модулю $m$  $(n \times n)$-матрицу $\mathbf{A} = (a_{ij})$, где $m$ -- число букв в алфавите. Выбирают случайный $n$-вектор $\mathbf{f} = (f_1, \dots, f_n)$. После чего $n$-грамма открытого текста $\mathbf{x} = (x_1, x_2, \dots, x_n)$ заменяется $n$-граммой шифрованного текста $\mathbf{y} = (y_1, y_2, \dots, y_n)$ по формуле:
+В шифре Хилла текст предварительно преобразуют в цифровую форму и разбивают на последовательности (блоки) по $n$ последовательных цифр. Такие последовательности называются \emph{$n$-граммами}. Выбирают обратимую по модулю $m$  $(n \times n)$-матрицу $\mathbf{A} = (a_{ij})$, где $m$~-- число букв в алфавите. Выбирают случайный $n$-вектор $\mathbf{f} = (f_1, \dots, f_n)$. После чего $n$-грамма открытого текста $\mathbf{x} = (x_1, x_2, \dots, x_n)$ заменяется $n$-граммой шифрованного текста $\mathbf{y} = (y_1, y_2, \dots, y_n)$ по формуле:
     \[ \mathbf{y} = \mathbf{x} \mathbf{A} + \mathbf{f} \mod m. \]
 Расшифрование проводится по правилу:
     \[ \mathbf{x} = (\mathbf{y} - \mathbf{f}) \mathbf{A}^{-1} \mod m. \]
@@ -73,7 +73,7 @@
 
 \example В английском языке $m = 26$,
     \[ a \rightarrow 0, ~ b \rightarrow 1, ~ \dots, ~ z \rightarrow 25. \]
-При шифровании использована криптосистема Хилла с матрицей второго порядка c нулевым вектором $\mathbf{f}$. Наиболее часто встречающиеся в шифртексте биграммы -- RH и NI, в то время как в исходном языке -- TH и HE (артикль THE). Найдём матрицу секретного ключа, составив уравнения
+При шифровании использована криптосистема Хилла с матрицей второго порядка c нулевым вектором $\mathbf{f}$. Наиболее часто встречающиеся в шифртексте биграммы~-- RH и NI, в то время как в исходном языке~-- TH и HE (артикль THE). Найдём матрицу секретного ключа, составив уравнения
 \[
     \begin{array}{l}
         R = 17 = -9 \mod 26, ~~ H = 7 \mod 26, ~~ N = 13 \mod 26, \\
