--- a/kerberos.tex
+++ b/kerberos.tex
@@ -33,14 +33,14 @@
 
 Введём обозначения для протокола между пользователем $C$ с ключом $K_C$ и сервисом $S$ с ключом $K_S$:
 \begin{itemize}
-    \item $ID_C, ID_{TGS}, ID_S$ -- идентификаторы пользователя, сервера TGS и сервиса $S$ соответственно;
-    \item $t_i, \tilde{t}_i$ -- запрашиваемые и выданные границы времени действия сеансовых ключей аутентификации;
-    \item $ts_i$ -- метка текущего времени (\langen{timestamp});
-    \item $N_i$ -- одноразовая метка (\langen{nonce})\index{одноразовая метка}, псевдослучайное число для защиты от атак воспроизведения сообщений;
-    \item $K_{C,TGS}, K_{C,S}$ -- выданные сеансовые ключи аутентификации пользователя и сервера TGS, пользователя и сервиса $S$ соответственно;
-    \item $T_{TGS} = E_{K_{TGS}}(K_{C,TGS} ~\|~ ID_C ~\|~ \tilde{t}_1)$ -- мандат (\langen{ticket}) для TGS, который пользователь расшифровать не может;
-    \item $T_{S} = E_{K_S}(K_{C,S} ~\|~ ID_C ~\|~ \tilde{t}_2)$ -- мандат для сервиса $S$, который пользователь расшифровать не может;
-    \item $K_1, K_2$ -- обмен информацией для генерирования общего секретного симметричного ключа дальнейшей коммуникации, например по протоколу Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана}.
+    \item $ID_C, ID_{TGS}, ID_S$~-- идентификаторы пользователя, сервера TGS и сервиса $S$ соответственно;
+    \item $t_i, \tilde{t}_i$~-- запрашиваемые и выданные границы времени действия сеансовых ключей аутентификации;
+    \item $ts_i$~-- метка текущего времени (\langen{timestamp});
+    \item $N_i$~-- одноразовая метка (\langen{nonce})\index{одноразовая метка}, псевдослучайное число для защиты от атак воспроизведения сообщений;
+    \item $K_{C,TGS}, K_{C,S}$~-- выданные сеансовые ключи аутентификации пользователя и сервера TGS, пользователя и сервиса $S$ соответственно;
+    \item $T_{TGS} = E_{K_{TGS}}(K_{C,TGS} ~\|~ ID_C ~\|~ \tilde{t}_1)$~-- мандат (\langen{ticket}) для TGS, который пользователь расшифровать не может;
+    \item $T_{S} = E_{K_S}(K_{C,S} ~\|~ ID_C ~\|~ \tilde{t}_2)$~-- мандат для сервиса $S$, который пользователь расшифровать не может;
+    \item $K_1, K_2$~-- обмен информацией для генерирования общего секретного симметричного ключа дальнейшей коммуникации, например по протоколу Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана}.
 \end{itemize}
 
 Схема протокола следующая.
@@ -55,7 +55,7 @@
             \item $C \rightarrow TGS: ~~ ID_S ~\|~ t_2 ~\|~ N_2 ~\|~ T_{TGS} ~\|~ E_{K_{C,TGS}}(ID_C ~\|~ ts_1)$.
             \item $C \leftarrow TGS: ~~ ID_C ~\|~ T_{S} ~\|~ E_{K_{C,TGS}}( K_{C,S} ~\|~ \tilde{t}_2 ~\|~ N_2 ~\|~ ID_S)$.
         \end{enumerate}
-    \item Аутентификация сеансовым ключом $K_{C,S}$ на сервисе $S$ -- создание общего сеансового ключа дальнейшего взаимодействия.
+    \item Аутентификация сеансовым ключом $K_{C,S}$ на сервисе $S$~-- создание общего сеансового ключа дальнейшего взаимодействия.
         \begin{enumerate}
             \item $C \rightarrow S: ~~ T_{S} ~\|~ E_{K_{C,S}}(ID_C ~\|~ ts_2 ~\|~ K_1)$.
             \item $C \leftarrow S: ~~ E_{K_{C,S}}( ts_2 ~\|~ K_2)$.
