--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -30,11 +30,11 @@
 
 \subsection{Простой протокол}
 
-Рассмотрим протокол распространения ключей с помощью асимметричных шифров. Введём обозначения: $K_B$ -- открытый ключ стороны $B$, а $K_A$ -- открытый ключ стороны $A$. Протокол включает три сеанса обмена информацией.
+Рассмотрим протокол распространения ключей с помощью асимметричных шифров. Введём обозначения: $K_B$~-- открытый ключ стороны $B$, а $K_A$~-- открытый ключ стороны $A$. Протокол включает три сеанса обмена информацией.
 \begin{enumerate}
     \item В первом сеансе сторона $A$ посылает стороне $B$ сообщение:
             \[ A \rightarrow B: ~ E_{K_B}(K_1, A), \]
-        где $K_1$ -- ключ, выработанный стороной $A$.
+        где $K_1$~-- ключ, выработанный стороной $A$.
     \item Сторона $B$ получает $(K_1, A)$ и передаёт стороне $A$ наряду с другой информацией свой ключ $K_2$ в сообщении, зашифрованном с помощью открытого ключа $K_A$:
             \[ A \leftarrow B: ~ E_{K_A}(K_2, K_1, B). \]
     \item Сторона $A$ получает и расшифровывает сообщение $(K_2, K_1, B)$. Во время третьего сеанса сторона $A$, чтобы подтвердить, что она знает ключ $K_2$, посылает стороне $B$ сообщение:
@@ -48,7 +48,7 @@
 \begin{enumerate}
     \item Сторона $A$ выбирает ключ $K$ и вырабатывает сообщение:
             \[ \left( K, ~ t_A, ~ S_A(K, t_A, B) \right), \]
-        где $t_A$ -- метка времени. Зашифрованное сообщение передаёт стороне $B$:
+        где $t_A$~-- метка времени. Зашифрованное сообщение передаёт стороне $B$:
         \[ A \rightarrow B: ~ E_{K_B}(K, ~ t_A, ~ S_A(K, t_A, B)). \]
     \item Сторона $B$ получает это сообщение, расшифровывает $\left( K, ~ t_A, ~ S_A(K, t_A, B) \right)$ и вырабатывает свою метку времени $t_B$. Проверка считается успешной, если $|t_B - t_A | < \delta $. Сторона $B$ знает свои реквизиты и может осуществлять проверку подписи.
 \end{enumerate}
