--- a/permutation_ciphers.tex
+++ b/permutation_ciphers.tex
@@ -1,7 +1,7 @@
 \subsubsection{Шифры перестановки}
 \selectlanguage{russian}
 
-Шифры \emph{перестановки} реализуются следующим образом. Берут открытый текст, например буквенный, и разделяют на блоки определённой длины m: $x_1, x_2, \dots, x_m, где x_i - i-й символ, i = 1, \dots , m$. Затем осуществляется перестановка позиций блока (вместе с символами). Перестановки могут быть однократные и многократные. Частный случай перестановки -- сдвиг. Приведём пример:
+Шифры \emph{перестановки} реализуются следующим образом. Берут открытый текст, например буквенный, и разделяют на блоки определённой длины m: $x_1, x_2, \dots, x_m, где x_i - i-й символ, i = 1, \dots , m$. Затем осуществляется перестановка позиций блока (вместе с символами). Перестановки могут быть однократные и многократные. Частный случай перестановки~-- сдвиг. Приведём пример:
 \begin{center}
     секрет $\xrightarrow{\text{сдвиг}}$ ретсек $\xrightarrow{\text{перестановка}}$ рскете.
 \end{center}
@@ -10,7 +10,7 @@
 Существуют так называемые \emph{маршрутные перестановки}. Используется какая-либо геометрическая фигура, например прямоугольник. Запись открытого текста ведётся по одному \emph{маршруту}, например по строкам, а считывание для шифрования осуществляется по другому маршруту, например по столбцам. Ключ шифра определяет эти маршруты.
 В случае, когда рассматривается перестановка блока текста фиксированной длины, перестановку можно рассматривать как замену.
 
-В полиалфавитных шифрах при шифровании открытый текст разбивается на блоки (последовательности) длины $n$, где $n$ -- \emph{период}. Этот параметр выбирает \emph{криптограф} и держит его в секрете.
+В полиалфавитных шифрах при шифровании открытый текст разбивается на блоки (последовательности) длины $n$, где $n$~-- \emph{период}. Этот параметр выбирает \emph{криптограф} и держит его в секрете.
 
 Поясним процедуру шифрования полиалфавитным шифром. Запишем шифруемое сообщение в матрицу по столбцам определённой длины. Пусть открытый текст таков: <<Игры различаются по содержанию, характерным особенностям, а также по тому, какое место они занимают в жизни детей>>. Зададим $n=4$ и запишем этот текст в матрицу размера $(4 \times 24)$:
 
