--- a/pki_key_length.tex
+++ b/pki_key_length.tex
@@ -22,7 +22,7 @@
         \multicolumn{5}{|c|}{Стандарт России} \\
         \hline
         Биты & 256 &  & 255 & \\
-        ГОСТ & 28147—89 & --- & 34.10-2001 & --- \\
+        ГОСТ & 28147"---89 &~--- & 34.10-2001 &~--- \\
         Год & 1989 & & 2001 & \\
 %       \hline
 %       \multicolumn{2}{|l|}{\parbox{4cm}{Россия: нелицензируемая деятельность}} & \multicolumn{4}{c|}{40} \\
@@ -55,11 +55,11 @@
     a+b \mod n & - & O(k). \\
 \end{array} \]
 
-Так как все описанные схемы ЭП используют возведение в степень по модулю, то битовая сложность -- $O(k^3)$. Оценки количества целочисленных $t$-разрядных умножений при вычислении ЭП имеют вид:
+Так как все описанные схемы ЭП используют возведение в степень по модулю, то битовая сложность~-- $O(k^3)$. Оценки количества целочисленных $t$-разрядных умножений при вычислении ЭП имеют вид:
 \begin{enumerate}
     \item RSA\index{электронная подпись!RSA}:
         \[ (2 \log_2 n) \cdot \left( \frac{\log_2 n}{t} \right)^2; \]
-    \item DSA\index{электронная подпись!DSA} (\langen{Digital Signature Algorithm}, стандарт США~\cite{FIPS-PUB-186-4}) -- электронная подпись, вычисляемая по принципу Эль-Гамаля\index{криптосистема!Эль-Гамаля} по модулю $p$ и с порядком циклической подгруппы $q$:
+    \item DSA\index{электронная подпись!DSA} (\langen{Digital Signature Algorithm}, стандарт США~\cite{FIPS-PUB-186-4})~-- электронная подпись, вычисляемая по принципу Эль-Гамаля\index{криптосистема!Эль-Гамаля} по модулю $p$ и с порядком циклической подгруппы $q$:
         \[ (2 \log_2 q) \cdot \left( \frac{\log_2 p}{t} \right)^2; \]
     \item ГОСТ Р 34.10-2001\index{электронная подпись!ГОСТ Р 34.10-2001} (стандарт России~\cite{GOST-2001}) и ECDSA\index{электронная подпись!ECDSA} (\langen{Elliptic Curve Digital Signature Algorithm}, стандарт США~\cite{FIPS-PUB-186-4}), вычисляемые по принципу Эль-Гамаля\index{криптосистема!Эль-Гамаля} в группе точек эллиптической кривой по модулю $p$:
         \[ (2 \log_2 p) \cdot 4 \cdot \left( \frac{\log_2 p}{t} \right)^2. \]
