--- a/prime-check-miller.tex
+++ b/prime-check-miller.tex
@@ -12,7 +12,7 @@
 
 Для того чтобы использовать это утверждение, представим чётное число $n - 1$ в виде произведения:
     \[ n-1 = 2^s r, \]
-где $s$ является натуральным числом, а $r$ -- нечётным. Возьмём некоторое $a$, $1 < a < n$, и рассмотрим последовательность чисел (все вычисления делаются по модулю $n$)
+где $s$ является натуральным числом, а $r$~-- нечётным. Возьмём некоторое $a$, $1 < a < n$, и рассмотрим последовательность чисел (все вычисления делаются по модулю $n$)
 \begin{equation}\label{eq:prime-check-miller-sequence}
 	a^{r}, a^{2r}, a^{2^2 r}, a^{2^3 r}, \dots, a^{2^{s-1} r}, a^{2^s r} = a^{n-1} \mod n.
 \end{equation}
@@ -55,7 +55,7 @@
 
 \begin{enumerate}
 	\item Возьмём все целые (можно простые) числа от $2$ до $2 \ln^2 n$ и проверим, являются ли они свидетелями простоты числа $n$ по Миллеру.
-	\item Если являются, то число $n$ является простым\index{число!простое}, иначе -- составным\index{число!составное}.
+	\item Если являются, то число $n$ является простым\index{число!простое}, иначе~-- составным\index{число!составное}.
 \end{enumerate}
 
 Данный тест является недоказанным (основывается на недоказанной гипотезе Римана), детерминированным и полиномиальным, так как и проверка одного свидетеля, и общее число требуемых свидетелей являются полиномиальными функциями от длины $n$. Тем не менее, число проверок в тесте остаётся достаточно большим (для чисел размером в 2048 бит это составляет более 250 тыс. проверок).
