--- a/secret-sharing-blackleys.tex
+++ b/secret-sharing-blackleys.tex
@@ -1,7 +1,7 @@
 \subsection[Схема Блэкли]{Схема разделения секрета Блэкли}\index{схема разделения секрета!Блэкли|(}\index{схема разделения секрета!векторная|(}
 \selectlanguage{russian}
 
-Схема разделения секрета Блэкли (\langen{George Robert Blakley},~\cite{Blackley:1979}), также называемая векторной схемой, основывается на том, что для восстановления всех координат точки в $K$-мерном пространстве, принадлежащей нескольким неколлинеарным гиперплоскостям, необходимо и достаточно знать уравнения $K$ таких плоскостей. То есть в двумерном пространстве нужны две пересекающиеся прямые, в трёхмерном -- три пересекающиеся в нужной точке плоскости и так далее.
+Схема разделения секрета Блэкли (\langen{George Robert Blakley},~\cite{Blackley:1979}), также называемая векторной схемой, основывается на том, что для восстановления всех координат точки в $K$-мерном пространстве, принадлежащей нескольким неколлинеарным гиперплоскостям, необходимо и достаточно знать уравнения $K$ таких плоскостей. То есть в двумерном пространстве нужны две пересекающиеся прямые, в трёхмерном~-- три пересекающиеся в нужной точке плоскости и так далее.
 
 \begin{figure}[thb]
 	\centering
@@ -33,14 +33,14 @@
 Если собрано меньшее количество следов (уравнений гиперплоскостей), то их будет недостаточно для решения системы уравнений.
 
 \example
-Приведём пример разделения секрета по схеме Блэкли в $\GF{11}$. При разделении секрета $M$, используя $(3,N)$-пороговую схему Блэкли, участники получили следы: $(4, 8, 2, 6)$, $(2, 6, 8, 3)$, $(6, 8, 4, 1)$. Зная, что следы представляют собой коэффициенты в уравнении плоскости общего вида, а исходный секрет -- первую координату точки пересечения плоскостей, составляем систему уравнений для нахождения координаты этой точки:
+Приведём пример разделения секрета по схеме Блэкли в $\GF{11}$. При разделении секрета $M$, используя $(3,N)$-пороговую схему Блэкли, участники получили следы: $(4, 8, 2, 6)$, $(2, 6, 8, 3)$, $(6, 8, 4, 1)$. Зная, что следы представляют собой коэффициенты в уравнении плоскости общего вида, а исходный секрет~-- первую координату точки пересечения плоскостей, составляем систему уравнений для нахождения координаты этой точки:
 \[ \left\{\begin{aligned}
    \left( 4\cdot x_1 + 8\cdot x_2 + 2\cdot x_3 + 6 \right) &= 0 &\mod 11,  \\
    \left( 2\cdot x_1 + 6\cdot x_2 + 8\cdot x_3 + 3 \right) &= 0 &\mod 11,  \\
    \left( 6\cdot x_1 + 8\cdot x_2 + 4\cdot x_3 + 1 \right) &= 0 &\mod 11.  \\
 \end{aligned} \right. \]
 
-Решением данной системы будет являться точка (6, 4, 2), а её первая координата -- разделяемый секрет.
+Решением данной системы будет являться точка (6, 4, 2), а её первая координата~-- разделяемый секрет.
 \exampleend
 
 \index{схема разделения секрета!векторная|)}\index{схема разделения секрета!Блэкли|)}
