--- a/substitution_ciphers.tex
+++ b/substitution_ciphers.tex
@@ -5,6 +5,6 @@
 
 В \emph{омофоне}\index{омофон} символам входного алфавита ставятся в соответствие непересекающиеся подмножества символов выходного алфавита. Количество символов в каждом подмножестве замены пропорционально частоте встречаемости символа открытого текста. Таким образом, омофон создаёт равномерное распределение символов шифртекста, и прямой частотный криптоанализ невозможен. При шифровании омофонами символ входного алфавита заменяется на случайно выбранный символ из подмножества замены.
 
-Шифры называются \emph{моноалфавитными}, когда для шифрования используется одно отображение входного алфавита в выходной алфавит. Если алфавиты на входе и выходе одинаковы, и их размеры (число символов) равны $D$, тогда $D!$ -- количество всевозможных моноалфавитных шифров замены такого типа.
+Шифры называются \emph{моноалфавитными}, когда для шифрования используется одно отображение входного алфавита в выходной алфавит. Если алфавиты на входе и выходе одинаковы, и их размеры (число символов) равны $D$, тогда $D!$~-- количество всевозможных моноалфавитных шифров замены такого типа.
 
 \emph{Полиалфавитный} шифр задаётся множеством различных вариантов отображения входного алфавита на выходной алфавит. Шифры замены могут быть как потоковыми, так и блочными. Однозначный полиалфавитный потоковый шифр замены называется \emph{шифром гаммирования}\index{шифр!гаммирования}. Символом алфавита может быть, например, 256-битовое слово, а размер алфавита – $2^{256}$ соответственно.
