--- a/tls.tex
+++ b/tls.tex
@@ -7,8 +7,8 @@
 \begin{itemize}
     \item Одностороннюю или взаимную аутентификацию клиента и сервера по открытым ключам сертификата X.509. В Интернете, как правило, делается \emph{односторонняя} аутентификация веб-сервера браузеру клиента, то есть только веб-сервер предъявляет сертификат (открытый ключ и ЭП к нему от вышележащего УЦ).
     \item Создание сеансовых симметричных ключей для шифрования и кода аутентификации сообщения для передачи данных в обе стороны.
-    \item Конфиденциальность\index{конфиденциальность} -- блочное или потоковое шифрование передаваемых данных в обе стороны.
-    \item Целостность\index{целостность} -- аутентификацию отправляемых сообщений в обе стороны имитовставкой\index{имитовставка} $\HMAC(K,M)$, описанной ранее.
+    \item Конфиденциальность\index{конфиденциальность}~-- блочное или потоковое шифрование передаваемых данных в обе стороны.
+    \item Целостность\index{целостность}~-- аутентификацию отправляемых сообщений в обе стороны имитовставкой\index{имитовставка} $\HMAC(K,M)$, описанной ранее.
 \end{itemize}
 
 Рассмотрим протокол TLS последней версии 1.2.
@@ -104,7 +104,7 @@
 %              case dh_rsa:
 %                  struct {} ;
 %                 /* message is omitted for rsa, dh_dss, and dh_rsa */
-%              /* may be extended, e.g., for ECDH -- see [TLSECC] */
+%              /* may be extended, e.g., for ECDH~-- see [TLSECC] */
 %          };
 %      } ServerKeyExchange;
 
@@ -138,7 +138,7 @@
 %          opaque verify_data[verify_data_length];
 %      } Finished;
 
-Одноразовая метка $N_C$ состоит из 32 байтов. Первые 4 байта содержат текущее время (gmt\_unix\_time), оставшиеся байты -- псевдослучайную последовательность, которую формирует криптографически стойкий генератор псевдослучайных чисел.
+Одноразовая метка $N_C$ состоит из 32 байтов. Первые 4 байта содержат текущее время (gmt\_unix\_time), оставшиеся байты~-- псевдослучайную последовательность, которую формирует криптографически стойкий генератор псевдослучайных чисел.
 
 Предварительный общий секрет $premaster$ длиной 48 байтов вместе с одноразовыми метками используется как инициализирующее значение генератора $PRF$ для получения общего секрета $master$, тоже длиной 48 байтов:
     \[ master = PRF(premaster, ~\text{текст \textquotedblleft master secret\textquotedblright}, ~ N_C + N_S) .\]
@@ -146,7 +146,7 @@
 И, наконец, уже из секрета $master$ таким же способом генерируется 6 окончательных сеансовых ключей, следующих друг за другом в битовой строке:
     \[ \{ (K_{E,1} ~\|~ K_{E,2}) ~\|~ (K_{\MAC,1} ~\|~ K_{\MAC,2}) ~\|~ (IV_1 ~\|~ IV_2) \} = \]
         \[ = PRF(master, ~\text{текст \textquotedblleft key expansion\textquotedblright}, ~ N_C + N_S), \]
-где ~ $K_{E,1}, ~ K_{E,2}$ -- два ключа симметричного шифрования, ~ $K_{\MAC,1}, ~ K_{\MAC,2}$ -- два ключа имитовставки\index{имитовставка}, ~ $IV_1, ~IV_2$ -- два инициализирующих вектора режима сцепления блоков\index{вектор инициализации}. Ключи с индексом 1 используются для коммуникации от клиента к серверу, с индексом 2 -- от сервера к клиенту.
+где ~ $K_{E,1}, ~ K_{E,2}$~-- два ключа симметричного шифрования, ~ $K_{\MAC,1}, ~ K_{\MAC,2}$~-- два ключа имитовставки\index{имитовставка}, ~ $IV_1, ~IV_2$~-- два инициализирующих вектора режима сцепления блоков\index{вектор инициализации}. Ключи с индексом 1 используются для коммуникации от клиента к серверу, с индексом 2~-- от сервера к клиенту.
 
 
 \subsection{Протокол записи}
