--- a/unicity_distance.tex
+++ b/unicity_distance.tex
@@ -59,7 +59,7 @@
     \[ \rho = 1 - \frac{H(M)}{N \log_2 L} \]
 означает избыточность источника открытых текстов\index{избыточность!открытого текста}.
 
-Если избыточность источника измеряется в битах на символ, а ключ шифрования выбирается случайным образом из всего множества ключей $\{0, 1\}^{l_K}$, где $l_K$ -- длина ключа в битах, то расстояние единственности $n$ также выражается в битах, и формула значительно упрощается:
+Если избыточность источника измеряется в битах на символ, а ключ шифрования выбирается случайным образом из всего множества ключей $\{0, 1\}^{l_K}$, где $l_K$~-- длина ключа в битах, то расстояние единственности $n$ также выражается в битах, и формула значительно упрощается:
 \begin{equation}\label{eq:unicity_distance_simple_frac}
 n_u \approx \frac{l_K}{\rho}.
 \end{equation}
