--- a/vigeneres_cipher.tex
+++ b/vigeneres_cipher.tex
@@ -3,7 +3,7 @@
 
 Шифр, который известен под именем Виженера, впервые описал Джованни Баттиста Беллазо (\langit{Giovanni Battista Bellaso}) в своей книге \foreignlanguage{italian}{``La cifra del Sig. Giovan Battista Belaso''}.
 
-Рассмотрим один из вариантов этого шифра. В самом простом случае квадратом \textbf{Виженера} называется таблица из циклически сдвинутых копий латинского алфавита, в котором буквы J и V исключены. Первая строка и первый столбец -- буквы латинского алфавита в их обычном порядке, кроме буквы W, которая стоит последней. В строках таблицы порядок букв сохраняется, за исключением циклических переносов. Представим эту таблицу.
+Рассмотрим один из вариантов этого шифра. В самом простом случае квадратом \textbf{Виженера} называется таблица из циклически сдвинутых копий латинского алфавита, в котором буквы J и V исключены. Первая строка и первый столбец~-- буквы латинского алфавита в их обычном порядке, кроме буквы W, которая стоит последней. В строках таблицы порядок букв сохраняется, за исключением циклических переносов. Представим эту таблицу.
 
 \begin{center} \resizebox{\textwidth}{!}{ \begin{tabular}{|c|*{24}c|}
     \hline
@@ -36,10 +36,10 @@
     \hline
 \end{tabular} } \end{center}
 
-Здесь первый столбец используется для ключевой последовательности, а первая строка -- для открытого текста. Общая схема шифрования такова: выбирается некоторая ключевая последовательность, которая периодически повторяется в виде длинной строки. Под ней соответственно каждой букве записываются буквы открытого текста в виде второй строки. Буква ключевой последовательности указывает строку в квадрате Виженера, буква открытого текста указывает столбец в квадрате. Соответствующая буква, стоящая в квадрате на пересечении строки и столбца, заменяет букву открытого текста в шифртексте. Приведём примеры.
+Здесь первый столбец используется для ключевой последовательности, а первая строка~-- для открытого текста. Общая схема шифрования такова: выбирается некоторая ключевая последовательность, которая периодически повторяется в виде длинной строки. Под ней соответственно каждой букве записываются буквы открытого текста в виде второй строки. Буква ключевой последовательности указывает строку в квадрате Виженера, буква открытого текста указывает столбец в квадрате. Соответствующая буква, стоящая в квадрате на пересечении строки и столбца, заменяет букву открытого текста в шифртексте. Приведём примеры.
 
 \example
-Ключевая последовательность состоит из периодически повторяющегося ключевого слова, известного обеим сторонам. Пусть ключевая последовательность состоит из периодически повторяющегося слова THIS, а открытый текст -- слова COMMUNICATIONSYSTEMS (см. таблицу). Пробелы между словами опущены.
+Ключевая последовательность состоит из периодически повторяющегося ключевого слова, известного обеим сторонам. Пусть ключевая последовательность состоит из периодически повторяющегося слова THIS, а открытый текст~-- слова COMMUNICATIONSYSTEMS (см. таблицу). Пробелы между словами опущены.
 \begin{center} \resizebox{\textwidth}{!}{ \begin{tabular}{|l|*{20}c|}
     \hline
     Ключ            & T & H & I & S & T & H & I & S & T & H & I & S & T & H & I & S & T & H & I & S \\
@@ -64,7 +64,7 @@
 \exampleend
 
 \example 
-Пусть ключевая последовательность образуется с помощью шифртекста. Стороны договариваются о первой букве ключа. В отличие от предыдущего случая, следующая буква ключа -- это результат шифрования первой буквы текста и~т.\,д. Пусть в качестве первой буквы выбрана буква $T$. Тогда приведённая в предыдущем примере таблица шифрования примет такой вид:
+Пусть ключевая последовательность образуется с помощью шифртекста. Стороны договариваются о первой букве ключа. В отличие от предыдущего случая, следующая буква ключа~-- это результат шифрования первой буквы текста и~т.\,д. Пусть в качестве первой буквы выбрана буква $T$. Тогда приведённая в предыдущем примере таблица шифрования примет такой вид:
 \begin{center} \resizebox{\textwidth}{!}{ \begin{tabular}{|l|*{20}c|}
     \hline
     Ключ            & T & X & K & X & H & C & P & Z & A & A & T & C & Q & D & X & S & L & E & I & U \\
