--- a/xss.tex
+++ b/xss.tex
@@ -36,9 +36,9 @@ http://stealcookie.com?auth=AJHVML43LDSL42SC6DF;
 Вставка гиперссылок является наиболее частой XSS-атакой. Иногда ссылки кодируются шестнадцатеричными числами вида \texttt{\%NN}, чтобы не вызывать сомнения у пользователя текстом ссылки.
 %Браузер самостоятельно не может отослать данные на другой сайт, отличный от текущего, поэтому передаваемая информация содержится в гиперссылках.
 
-%(например, JavaScript код), либо программным обеспечением, генерирующим HTML-страницу для выдачи клиенту $B$ (например, PHP код). Цель XSS атаки -- либо выполнение JavaScript кода браузером клиента, либо выполнение скриптового кода на веб-сервере при запросе клиента к нему.
+%(например, JavaScript код), либо программным обеспечением, генерирующим HTML-страницу для выдачи клиенту $B$ (например, PHP код). Цель XSS атаки~-- либо выполнение JavaScript кода браузером клиента, либо выполнение скриптового кода на веб-сервере при запросе клиента к нему.
 
-%Простой пример -- веб-форум. Пользователи вводят в формы текстовые сообщения, которые запоминаются в БД и показываются другим пользователям. Страница форума генерируется каждый раз заново при запросе пользователей информационной системой. Генерирование часто происходит из шаблона страницы, который содержит и базовый статический HTML код страницы, и исполняемый код скрипта для вставки динамического содержания на основе запроса к базе данных. Как правило, злоумышленник пользуется во время генерирования страницы некорректным экранированием текста, введённого им в формах ввода текста веб-страницы, кавычек, слэшей. То есть, текстовые значения полей, которые сохраняются в базе данных веб-сайта и отображаются другим пользователям, содержат исполняемый код злоумышленника.
+%Простой пример~-- веб-форум. Пользователи вводят в формы текстовые сообщения, которые запоминаются в БД и показываются другим пользователям. Страница форума генерируется каждый раз заново при запросе пользователей информационной системой. Генерирование часто происходит из шаблона страницы, который содержит и базовый статический HTML код страницы, и исполняемый код скрипта для вставки динамического содержания на основе запроса к базе данных. Как правило, злоумышленник пользуется во время генерирования страницы некорректным экранированием текста, введённого им в формах ввода текста веб-страницы, кавычек, слэшей. То есть, текстовые значения полей, которые сохраняются в базе данных веб-сайта и отображаются другим пользователям, содержат исполняемый код злоумышленника.
 
 На 2009 г. 80\% обнаруженных уязвимостей веб-сайтов являются XSS-уязвимостями.
 
